--- a/ok/wk/wk11-0.4.0.0.0.md
+++ b/ok/wk/wk11-0.4.0.0.0.md
@@ -12,7 +12,7 @@
 
 一是抓主证以明确诊断：
 
-1.腹痛：突然右上腹部剧烈“钻顶”样痛，发作时辗转不安，面色苍白，大汗淋漓，呻吟不止，四肢厥冷，多发作在夜间或饭后。痛止后则如常人。其特点是症状产重，体征轻微。
+1.腹痛：突然右上腹部剧烈“钻顶”样痛，发作时辗转不安，面色苍白，大汗淋漓，呻吟不止，四肢厥冷，多发作在夜间或饭后。痛止后则如常人。其特点是症状严重，体征轻微。
 
 2.恶心呕吐：腹痛不久，发生恶心呕吐，吐物先为胃内容物，后为胆汁，有些病人还吐蛔虫。若既往有蛔虫病史，对本病诊断更有价值。
 
@@ -84,7 +84,8 @@
 
 1.茵陈60克，加水至完全浸泡药物为度，煎成200毫升为一剂，一次温服。
 
-2.巴豆100毫克顿服，至腹泻为度，每天量以不超过400毫克为宜。制服法，巴豆去皮白膜，取仁生用，切成细小颗粒吞服。腹泻剧者，可停药，并饮冷米汤或冷绿豆汤。
+2.巴豆100毫克顿服，至腹泻为度，每天量以不超过400毫克为宜。
+制服法：巴豆去皮白膜，取仁生用，切成细小颗粒吞服。腹泻剧者，可停药，并饮冷米汤或冷绿豆汤。
 
 3.食醋60毫升，加入花椒少许，加热煮开后，除掉花椒顿服。
 
