--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -186,11 +186,11 @@
 
 ​        (十）药筒拔法
 
-是用药物将竹筒煮过，然后吸在皮肤上进行治疗的一种外治法。具有宣通气血，拔毒泄热的作用，从而达到脓毒自出，毒尽疮愈的目的。此法还可减少因挤压的痛苦，防止因脓毒不得外出而引起毒反内攻的流弊。使用的药筒用1.5至2公分直径的成熟竹子制成，按竹节截断，每节约长8公分，将筒的边口削至0.2公分的厚度，吸口处打磨光滑平匀。以吸力好，竹口不剌划皮肤为合度。
+是用药物将竹筒煮过，然后吸在皮肤上进行治疗的一种外治法。具有宣通气血，拔毒泄热的作用，从而达到脓毒自出，毒尽疮愈的目的。此法还可减少因挤压的痛苦，防止因脓毒不得外出而引起毒反内攻的流弊。使用的药筒用1.5至2公分直径的成熟竹子制成，按竹节截断，每节约长8公分，将筒的边口削至0.2公分的厚度，吸口处打磨光滑平匀。以吸力好，竹口不刺划皮肤为合度。
 
 适应证：一般适用于有头疽坚硬散漫不收，脓毒不得外出者；或毒蛇咬伤，肿势扩散，毒水不出者。
 
-用法：先用鲜菖蒲、羌活、独活、紫苏、蕲艾、白芷、甘草各15克，连须葱90克，用清水煎数十滚，待药浓熟时加入竹筒数个至十余个不等，再煮数十滚。将药水锅（最好不用铁锅）放在病人榻前，取筒倒去药液，乘热急対疮口合上，按紧自然吸住，一般5〜10分钟即可取下，取时不要生拉硬拔。每天视其需要和病体强弱，拔1至5筒，如其坚肿不消，或肿势继续扩散，脓毒依然不能外出者，翌日可再拔，并连用数天。如果仅仅是为了解毒退热的目的，亦可用甘菊花120克煮竹筒。
+用法：先用鲜菖蒲、羌活、独活、紫苏、蕲艾、白芷、甘草各15克，连须葱90克，用清水煎数十滚，待药浓熟时加入竹筒数个至十余个不等，再煮数十滚。将药水锅（最好不用铁锅）放在病人榻前，取筒倒去药液，乘热急对疮口合上，按紧自然吸住，一般5〜10分钟即可取下，取时不要生拉硬拔。每天视其需要和病体强弱，拔1至5筒，如其坚肿不消，或肿势继续扩散，脓毒依然不能外出者，翌日可再拔，并连用数天。如果仅仅是为了解毒退热的目的，亦可用甘菊花120克煮竹筒。
 
 注意事项：拔筒操作要做到快、准、稳；刚用药煮过的药筒吸口处温度甚高，在扣上皮肤之前，一定要用湿毛巾迅速按几下，以避免烫伤；起筒时必须验其筒内拔出的脓血，若是鲜明红黄稠厚者易治，若是败浆稀水，气秽黑绿者难疗。患者体质极度虚弱者，或全身浮肿，或有全身性出血症者，或疮疡患处正好处在大血管附近者，以及局部有肿瘤疾患者，都不适合用药筒疗法。
 
@@ -206,7 +206,7 @@
 
 ①直接灸，又称明灸、着肤灸，是指艾炷直接放在皮肤上施灸的方法。灸量小者不化脓，灸量大者可化脓，形成瘢痕。
 
-②间接炎：又称间隔灸、隔物灸，指艾炷与穴位皮肤之间衬隔物品的灸法。所用隔灸药宜随证选用，常用的有隔蒜灸，通治痈疽；隔豆豉灸，用于痈疽不起；隔香附饼灸，用于瘰疬、流注及风寒侵袭经络结肿而痛者；隔附子饼灸，用于气皿亏损，疮口紫陷及久漏不合者。还有隔姜灸、隔木香饼灸、隔黄蜡灸等。
+②间接炎：又称间隔灸、隔物灸，指艾炷与穴位皮肤之间衬隔物品的灸法。所用隔灸药宜随证选用，常用的有隔蒜灸，通治痈疽；隔豆豉灸，用于痈疽不起；隔香附饼灸，用于瘰疬、流注及风寒侵袭经络结肿而痛者；隔附子饼灸，用于气血亏损，疮口紫陷及久漏不合者。还有隔姜灸、隔木香饼灸、隔黄蜡灸等。
 
 2.艾条灸：指用艾条施灸的方法，又名艾卷灸。分悬起灸和实按灸两种。
 
@@ -252,7 +252,7 @@
 
 适应证：寻常疣、扁平疣，尤以明显高出皮面者效果为好。
 
-用法：患处常规消毒后，左手将疣部周围皮肤绷紧，右手持消毒刮匙自疣的根部用力迅速将其刮除，并尽暈将疣的残余组织刮净，并涂以33.3%三氯醋酸液（或浓石炭酸），再外涂3%龙胆紫，纱布包扎两三日即愈。
+用法：患处常规消毒后，左手将疣部周围皮肤绷紧，右手持消毒刮匙自疣的根部用力迅速将其刮除，并尽量将疣的残余组织刮净，并涂以33.3%三氯醋酸液（或浓石炭酸），再外涂3%龙胆紫，纱布包扎两三日即愈。
 
 注意事项：局部有感染发炎者，不宜刮除；刮除后5〜7日局部不能沾水。
 
@@ -272,7 +272,7 @@
 
 ②内裹药物法：将药物预先放在纸内，裹好搓成纸线备用。内裹药物，一般多用白降丹、枯痔散等，因它有腐蚀化管的作用，故适用于痿管或窦道已成者。
 
-注意亊项：药线插入疮口中，应留出一小部分在疮口之外，并应将留出的药线末端，向疮口侧方或下方折放，再以膏药或油膏盖贴固定。如脓水已尽，流出淡黄色粘稠液体时，即使脓腔尚深，亦不可再插药线，否则会影响收口的时间。
+注意事项：药线插入疮口中，应留出一小部分在疮口之外，并应将留出的药线末端，向疮口侧方或下方折放，再以膏药或油膏盖贴固定。如脓水已尽，流出淡黄色粘稠液体时，即使脓腔尚深，亦不可再插药线，否则会影响收口的时间。
 
 2.导管引流
 
