--- a/ok/wk/wk11-0.5.0.0.0.md
+++ b/ok/wk/wk11-0.5.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-中医认为“石淋”、“血淋”主要是肾气虚弱，膀胱气化失调，湿热蕴积下焦所致。肾与膀胱相表里，主水液代谢，肾气充盛，气化正常，则小便自利。又脾为水之堤坊，堤坊固则水道利，每因过食肥甘酒热之品，或思虑过度，气结于中，致使脾虚湿盛。总之不外因先天不足，或由后天失养，致使肾气虚弱，陴运无权，气化失调，小便不利，污水杂质不能正常随尿液排出体外。于是湿热蕴结，煎熬尿液，久之，杂质污浊聚而成石，则为石淋。正如《类证治裁》所言：“诸淋皆肾虚，膀胱生热，故小水涩而不利也。”结石阻塞尿道，气血不通，失去正常运行，则凝聚一处，而见腰腹绞痛等症状。若遇过劳或结石活动，损伤脉络，或热盛伤络，迫血妄行则腰腹剧痛，辗转不安，尿中带血而为“血淋”。
+中医认为“石淋”、“血淋”主要是肾气虚弱，膀胱气化失调，湿热蕴积下焦所致。肾与膀胱相表里，主水液代谢，肾气充盛，气化正常，则小便自利。又脾为水之堤坊，堤坊固则水道利，每因过食肥甘酒热之品，或思虑过度，气结于中，致使脾虚湿盛。总之不外因先天不足，或由后天失养，致使肾气虚弱，脾运无权，气化失调，小便不利，污水杂质不能正常随尿液排出体外。于是湿热蕴结，煎熬尿液，久之，杂质污浊聚而成石，则为石淋。正如《类证治裁》所言：“诸淋皆肾虚，膀胱生热，故小水涩而不利也。”结石阻塞尿道，气血不通，失去正常运行，则凝聚一处，而见腰腹绞痛等症状。若遇过劳或结石活动，损伤脉络，或热盛伤络，迫血妄行则腰腹剧痛，辗转不安，尿中带血而为“血淋”。
 
 〔辨证论治〕
 
@@ -20,7 +20,7 @@
 
 4.叩击痛：肾与输尿管结石往往在肾区或沿输尿管有叩击痛。
 
-X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影者，可经肾孟造影协助确诊。
+X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影者，可经肾盂造影协助确诊。
 
 二是应根据本病的临床表现和病机辨析。
 
@@ -36,7 +36,7 @@ X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影
 
 方药：八正散加金钱草、海金砂。
 
-有血尿者加白茅根、大小蓟、茜草，疼痛剧烈、窜痛者加元胡、川棟子，痛点不移者加蒲黄、五灵脂。并应因势利导，及时行“总攻”疗法，有希望使结石下移或排出。
+有血尿者加白茅根、大小蓟、茜草，疼痛剧烈、窜痛者加元胡、川楝子，痛点不移者加蒲黄、五灵脂。并应因势利导，及时行“总攻”疗法，有希望使结石下移或排出。
 
 2.气滞血瘀：有排石史，或经腹部平片确诊为输尿管结石，腰部钝痛，痛点长期固定不移，或只有不适感，小便时难，色黄赤而混浊，苔黄或薄白，舌有紫斑或紫点，脉涩滞不利，证属气滞血瘀。
 
@@ -46,7 +46,7 @@ X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影
 
 若出现腰酸疼痛，向会阴部放射者，可能是结石活动下移，应随即改用清热利湿，排石通淋之法。如仍无动静者，可用化石散，或核桃仁60克，香油煎熟，每日一剂，缓缓消化结石，伺机再服破气化瘀之品。
 
-3.肾阳虚损：泌尿系结石久久不愈，如出现面色胱白，神疲乏力，肢寒畏冷，腰脊酸疼，食少便溏，舌胖，边有齿痕，脉沉而弱的症状，则为湿热久积下焦，肾阳受损。
+3.肾阳虚损：泌尿系结石久久不愈，如出现面色㿠白，神疲乏力，肢寒畏冷，腰脊酸疼，食少便溏，舌胖，边有齿痕，脉沉而弱的症状，则为湿热久积下焦，肾阳受损。
 
 治法：消石通淋，辅以壮阳。
 
@@ -54,7 +54,7 @@ X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影
 
 阳虚甚者加附子、肉桂。
 
-4.肾阴不足，五心烦热，口干盗汗，头晕目眩，腰酸腿软，小便不利，夜尿增多，少寐健忘，咽干，舌红少苔，脉细数。属邪热久羁，真阴受损。
+4.肾阴不足：五心烦热，口干盗汗，头晕目眩，腰酸腿软，小便不利，夜尿增多，少寐健忘，咽干，舌红少苔，脉细数。属邪热久羁，真阴受损。
 
 治法：养阴清热，通淋排石。
 
@@ -68,7 +68,7 @@ X线检查：绝大多数泌尿道结石在X平片上可显影，少数不显影
 
 赵xx，男，46岁，住院号8017。
 
-1977年10月22日，突然发现剧烈腰痛、腹痛。1978年2月2日腹部平片发现为左侧输尿管结石，服五剂排石汤后血尿停止。2月16日又拍片，发现结石下移至输尿管入膀胱口之峡窄部，于是又在本厂治疗二月多，结石再未活动。病人1978年4月18日住我院治疗。病人时有恶心便干，舌苔变黑，舌质偶尔发紫，加用大黄等药后，这些症状即可缓解。诊断为下焦瘀滞，改用祛瘀破气之品治疗。从7月5日开始内服三棱、莪术、丹参、红花、川牛膝、青皮、枳实、白芍、甘草等，连服十余剂后，于7月18日发现尿中排出一块结石（大1.0×0.6×0.6厘米，棕褐色，结石表面凹凸不平，呈荔枝皮状），而后痊愈出院。（节选自《中医外科心得集》）。
+1977年10月22日，突然发现剧烈腰痛、腹痛。1978年2月2日腹部平片发现为左侧输尿管结石，服五剂排石汤后血尿停止。2月16日又拍片，发现结石下移至输尿管入膀胱口之峡窄部，于是又在本厂治疗二月多，结石再未活动。病人1978年4月18日住我院治疗。病人时有恶心、便干，舌苔变黑，舌质偶尔发紫，加用大黄等药后，这些症状即可缓解。诊断为下焦瘀滞，改用祛瘀破气之品治疗。从7月5日开始内服三棱、莪术、丹参、红花、川牛膝、青皮、枳实、白芍、甘草等，连服十余剂后，于7月18日发现尿中排出一块结石（大1.0×0.6×0.6厘米，棕褐色，结石表面凹凸不平，呈荔枝皮状），而后痊愈出院。（节选自《中医外科心得集》）。
 
 **按**：本案尿道结石较大，嵌顿于尿道三月多，改用行气活血，通淋之品而取效。可见本法只要辨证准确，用之的当是提高疗效的好措施。但对体质虚弱者宜慎用。
 
