--- a/ok/fjx/fjx18-0.1.0.0.0.md
+++ b/ok/fjx/fjx18-0.1.0.0.0.md
@@ -10,6 +10,6 @@
 
 〔临证应用〕本方原治虚寒兼有瘀血内阻之崩漏证，后世用于治疗寒热虚实夹杂之月经不调，故为妇科调经之祖方。临床表现可见月经周期紊乱，或前或后、或逾期不止，或一月再行，或经停不至。小腹冷痛，傍晚发热，手足烦热，唇口干燥，舌暗淡，苔薄白，脉沉细无力或弦细而涩。亦治虚寒性不孕证。正如陈元犀言：“月经过期不来者能通之，月来过多者能止之，少腹寒而不受胎者并能治之，统治带下三十六病，其神妙不可言矣。”
 
-若少腹冷痛甚者，可去丹皮，麦冬，加小茴，炒艾叶、桂枝改肉桂，以散寒止痛；若气滯者加番附、乌药行气止痛；漏下色淡不止去丹皮加炮姜、妙艾叶、熟地以温经补血止血；气虚甚者加黄芪益气。
+若少腹冷痛甚者，可去丹皮、麦冬，加小茴、炒艾叶，桂枝改肉桂，以散寒止痛；若气滞者加香附、乌药行气止痛；漏下色淡不止去丹皮加炮姜、炒艾叶、熟地以温经补血止血；气虚甚者加黄芪益气。
 
-〔文献摘录〕尤在泾：妇人年五十所，天癸巳断而病下利，似非因经所致矣。不知少腹旧有积血，欲行而未得遽行，欲止而不能竟止，于是下利窘急，至数十日不止，暮即发热者，血结在阳，阳气至暮不得入于阴，而反浮于外也。少腹里急腹满者，血积不行，亦阴寒在下也。手掌烦热病在阴，掌亦阴也，唇口干燥，血内瘀者，不外荣也。此为瘀血作利，不必治利，但去其瘀而利自止。吴茱萸、桂枝、丹皮，入血散寒而行其瘀；芎、归、芍药、麦冬、阿胶，以生新血；人参、甘草、姜、夏，以正脾气。盖瘀久者荣必衰，下多者脾必伤也。（《金匮要略心典·卷下》）。
+〔文献摘录〕尤在泾：妇人年五十所，天癸已断而病下利，似非因经所致矣。不知少腹旧有积血，欲行而未得遽行，欲止而不能竟止，于是下利窘急，至数十日不止，暮即发热者，血结在阳，阳气至暮不得入于阴，而反浮于外也。少腹里急腹满者，血积不行，亦阴寒在下也。手掌烦热病在阴，掌亦阴也，唇口干燥，血内瘀者，不外荣也。此为瘀血作利，不必治利，但去其瘀而利自止。吴茱萸、桂枝、丹皮，入血散寒而行其瘀；芎、归、芍药、麦冬、阿胶，以生新血；人参、甘草、姜、夏，以正脾气。盖瘀久者荣必衰，下多者脾必伤也。（《金匮要略心典·卷下》）。
