--- a/ok/fjx/fjx18-0.3.0.0.0.md
+++ b/ok/fjx/fjx18-0.3.0.0.0.md
@@ -1,6 +1,6 @@
 ## 完带汤《傅青主女科》
 
-〔组成〕白术一两，土炒〈30克） 山药一两，炒（30克） 人参二钱（6克） 白芍五钱，酒炒（15克） 车前子三钱，酒炒（9克）苍术三钱，制（9克） 甘草一钱（3克） 陈皮五分（1.5克） 黑芥德五分（1.5克） 柴胡六分（1.8克） 半夏一钱（6克）
+〔组成〕白术一两，土炒（30克） 山药一两，炒（30克） 人参二钱（6克） 白芍五钱，酒炒（15克） 车前子三钱，酒炒（9克）苍术三钱，制（9克） 甘草一钱（3克） 陈皮五分（1.5克） 黑芥穗五分（1.5克） 柴胡六分（1.8克） 半夏一钱（6克）
 
 〔煎服法〕水煎服。
 
