update ok/ya/ya01-0.15.0.0.0.md. 剡（shan扇）县
有音无调，原书也没有调，应该修正为
剡（shàn扇）县

已经提交 疑义

䒿（lao辽）
注音无调，原书有调，
䒿（liáo辽）

--- a/ok/ya/ya01-0.15.0.0.0.md
+++ b/ok/ya/ya01-0.15.0.0.0.md
@@ -8,10 +8,10 @@
 
 ①仙释：指道家的神仙术和佛学。
 
-②从支遁居剡：指于法开跟随广州胡医支法从隐居在剡（shan扇）县（今浙江嵊县西南）。
+②从支遁居剡：指于法开跟随广州胡医支法从隐居在剡（shàn扇）县（今浙江嵊县西南）。
 
 ③脔：切成小片的肉。
 
-④䒿（lao辽）：肠子上的脂肪。
+④䒿（liáo辽）：肠子上的脂肪。
 
 **〔评按〕**滞产原因很多，本案似因产妇体虚，生产无力所致。于氏嘱其吃[羊肉](https://www.gmzyjc.com/read/bc/bc17-0.2.22.0.0.md)，颇具食疗特色。[羊肉](https://www.gmzyjc.com/read/bc/bc17-0.2.22.0.0.md)有益气补虚的作用，孙思邈《千金•食治》还有“主暖中止痛，利产妇”的记载。再配以针刺催产，故很快娩生。所谓“羊䒿”，当指胞衣羊水。
