--- a/ok/fjx/fjx18-0.4.0.0.0.md
+++ b/ok/fjx/fjx18-0.4.0.0.0.md
@@ -6,10 +6,10 @@
 
 〔讲解〕本方主治气血两虚，不能营养摄纳胎元而屡有堕胎之证。治宜益气健脾，养血安胎之法。方中用人参、黄芪、白术、炙甘草补脾益气；当归、熟地、芍药和血养血；川续断补益肝肾以安胎。其中白术与黄芩相配，具有健脾清热，安胎之功。少用砂仁，取其辛温而涩，既可理气和中，亦可安胎。川芎配在补血养血药中，是调和血中之气。糯米甘平养脾胃而固胎元。诸药配伍，共收益气健脾，补养肝肾而安胎元之功。
 
-〔临证应用〕本方为治气血双虚，胎元不固的胎漏病而设。临床表现胎动不安或屡有墮胎宿患，面色淡白，倦怠乏力，不思饮食，舌质淡，苔薄白，脉滑少力或沉弱．
+〔临证应用〕本方为治气血双虚，胎元不固的胎漏病而设。临床表现胎动不安或屡有墮胎宿患，面色淡白，倦怠乏力，不思饮食，舌质淡，苔薄白，脉滑少力或沉弱。
 
 现代常用本方治疗习惯流产，从妊娠两月起，每周服用一剂，连服二至三月，有一定效验。
 
-原书加减有“觉有热者倍黄芩，少用砂仁、觉胃弱者，多用砂仁，少加黄芩。”
+原书加减有“觉有热者倍黄芩，少用砂仁，觉胃弱者，多用砂仁，少加黄芩。”
 
 〔文献摘录〕徐东皋：“妇人凡怀胎二、三个月，惯要墮胎，名曰小产。此由体弱，气血两虚，藏府火多，血分受热，以致然也。医家又谓安胎多用艾、附、砂仁，热补尤增祸患，而速其堕矣。殊不知，血气清和，无火煎烁则胎自安而固，气虚则提不住，血热则溢妄行。欲其不堕得乎？香附虽云快气开郁，多用则损正气；砂仁快脾气，多用亦耗真气，沉香燥之性，气血两伤，求以安胎，适又损胎而反堕也。今惟以泰山盘石散、千金保孕丸二方，能夺化工之妙，百发百效，万无一失，甫故表而出之，以为好生君子共知也。”
