update ok/wk/wk13-0.1.0.0.0.md. 原文有“这是临床上的重要杯志 ”，应为“这是临床上的重要标志 ”，电子版已改。 原文有“防止发生肛门周感染 ”，应为“防止发生肛门周围感染 ”，电子版已改。

--- a/ok/wk/wk13-0.1.0.0.0.md
+++ b/ok/wk/wk13-0.1.0.0.0.md
@@ -8,15 +8,15 @@
 
 〔解剖与生理概述〕
 
-肛门直肠是消化道的末端，是通向体外的出口。直肠生发于内胚层，肛管生发于外胚层。齿线为其分界，这是临床上的重要杯志。
+肛门直肠是消化道的末端，是通向体外的出口。直肠生发于内胚层，肛管生发于外胚层。齿线为其分界，这是临床上的重要标志。
 
 1.直肠：全长约12厘米，上接乙状结肠，下终于齿线与肛管连接。上下两端缩窄，中部肠腔扩大形成直肠壶腹。直肠壶腹的前壁向前膨出，与肛管几乎成一直角。这个角度受到损伤，可造成大便失禁，需重新修复这一角度才能使排便恢复正常。
 
-直肠前部上2/3及两侧上1/3有腹膜遮盖，后壁无腹膜遮盖，在两侧腹膜反折平面，距肛门7〜8厘米。因此行直肠脱垂注射术时，不要刺入8厘米以上，以防刺破腹膜。
+直肠前部上2/3及两侧上1/3有腹膜遮盖，后壁无腹膜遮盖，在两侧腹膜反折平面，距肛门7~8厘米。因此行直肠脱垂注射术时，不要刺入8厘米以上，以防刺破腹膜。
 
 直肠粘膜较厚，有三个半月形的皱襞，内有环肌纤维，称为直肠瓣。
 
-2.肛管，长约3厘米，其外端为肛门，上端与直肠相连接，周围有内外括约肌环绕。在直肠粘膜与肛管皮肤交界处粘膜呈6〜10个纵行皱折，称为直肠柱或肛柱。两个直肠柱下端之间有半月形粘膜皱襞，称为肛门瓣。肛门瓣与直肠柱之间的肠壁粘膜形成向上开口的袋状间隙，称为肛隐窝或肛窦。隐窝底部有腺体的导管开口。此为肛门周围脓肿和肛瘘的起源地。由于这些解剖结构，直肠粘膜与肛管皮肤之间形成一条不整齐的交界线，称为齿线。齿线上有2〜6个三角形乳头状突起，称为肛乳突。在肛管中、下1/3交界处，触诊时可摸到明显环状沟，这是肛门白线，是内括约肌下缘与外括约肌皮下层的交接处，所以又称括约肌间线。
+2.肛管：长约3厘米，其外端为肛门，上端与直肠相连接，周围有内外括约肌环绕。在直肠粘膜与肛管皮肤交界处粘膜呈6~10个纵行皱折，称为直肠柱或肛柱。两个直肠柱下端之间有半月形粘膜皱襞，称为肛门瓣。肛门瓣与直肠柱之间的肠壁粘膜形成向上开口的袋状间隙，称为肛隐窝或肛窦。隐窝底部有腺体的导管开口。此为肛门周围脓肿和肛瘘的起源地。由于这些解剖结构，直肠粘膜与肛管皮肤之间形成一条不整齐的交界线，称为齿线。齿线上有2~6个三角形乳头状突起，称为肛乳突。在肛管中、下1/3交界处，触诊时可摸到明显环状沟，这是肛门白线，是内括约肌下缘与外括约肌皮下层的交接处，所以又称括约肌间线。
 
 肛门白线与齿线之间，有环形平滑区，称为栉膜。肛裂时，栉膜有大量的纤维组织增生，栉膜变厚而坚硬，叫做栉膜带。在治疗肛裂时应切断栉膜带。
 
@@ -68,7 +68,7 @@
 
 流脓：常见于肛门周围脓肿和肛瘘，应分别虚实。实证：脓出黄稠，臭秽，兼有粪臭味重，为多湿热蕴阻肛门，热盛肉腐。虚证：脓水清稀，挟有败絮样物，无臭或微带粪臭，因气血不足，阴虚内热而成。
 
-便秘：便秘见于内外痔疮、肛裂等病，虚实不同。虚证，大便燥结，腹满作胀而喜暖喜按，伴有面色㿠白，头晕心悸，神疲乏力，多为血虚肠燥。实证：大便秘结，腹满胀痛而拒按，伴有面红，口臭，身热，心烦，苔黄燥，脉数等，多为热结肠燥。
+便秘：便秘见于内外痔疮、肛裂等病，虚实不同。虚证：大便燥结，腹满作胀而喜暖喜按，伴有面色㿠白，头晕心悸，神疲乏力，多为血虚肠燥。实证：大便秘结，腹满胀痛而拒按，伴有面红，口臭，身热，心烦，苔黄燥，脉数等，多为热结肠燥。
 
 分泌物：常见于内痔脱出、直肠脱垂、肛瘘等，虚实有别。
 
@@ -80,7 +80,7 @@
 
 在行肛门直肠检查时要取适当的姿势，然后要病人张口作深呼吸或排便动作。在指套或肛门镜上涂以润滑剂，先将指套或肛门镜抵压肛门口，待肛门部松弛时，缓慢插入。
 
-2.疾病好发部位：肛门病的部位，常用膀胱截石位表示，以时钟的十二等分标记法，将肛门分为十二个部位。前面（会阴）称12点；后面（尾骶）为6点。内痔好发于3、7、11点；赘皮外痔好发于6、12点；血栓外痔好发于3、9点；肛裂好发于6、12点。肛瘘内口以3〜9点连线为界，其瘘管外口位于此线前面的，其管道多为直行；其瘘管外口位于此线后面的，其管道多为弯形，其内口多见于6点；马蹄形肛瘘内口亦多在6点附近；凡瘘管外口距肛缘近者，其管道多短，外口距肛缘远的，其管道多长。
+2.疾病好发部位：肛门病的部位，常用膀胱截石位表示，以时钟的十二等分标记法，将肛门分为十二个部位。前面（会阴）称12点；后面（尾骶）为6点。内痔好发于3、7、11点；赘皮外痔好发于6、12点；血栓外痔好发于3、9点；肛裂好发于6、12点。肛瘘内口以3~9点连线为界，其瘘管外口位于此线前面的，其管道多为直行；其瘘管外口位于此线后面的，其管道多为弯形，其内口多见于6点；马蹄形肛瘘内口亦多在6点附近；凡瘘管外口距肛缘近者，其管道多短，外口距肛缘远的，其管道多长。
 
 3.检查体位：肛门直肠疾病在检查和治疗时，常用下述6种体位，可根据要求选用一种或二种体位。
 
@@ -134,6 +134,6 @@
 
 1.保持大便通畅，养成每天定时大便的习惯。注意饮食卫生，多食蔬菜，多饮开水，避免便秘。
 
-2.保持肛门清洁卫生，勤洗浴，避免擦伤，防止发生肛门周感染。
+2.保持肛门清洁卫生，勤洗浴，避免擦伤，防止发生肛门周围感染。
 
 3.对肛门部有关疾病应及时治疗，如肛周疖、痈、湿疹，或蛲虫、滴虫病等，避免肛瘘、肛裂、肛门瘙痒症等病的发生。
