--- a/ok/gk/gk05-0.2.11.0.0.md
+++ b/ok/gk/gk05-0.2.11.0.0.md
@@ -18,7 +18,7 @@
 
 尺骨干骨折，一般移位不大，且表浅于皮下，手法整复对位比较容易，前臂小夹板固定，辨证施治，均取得预期效果。
 
-1.整复手法：患者平卧位，在局麻或臂丛麻醉下，肩外，展50〜70°，肘屈90°，前臂中立位，一助手握住伤肢拇指及鱼际部，另一手握住余四指，另一助手双手握住上臂，作对拉牵引，矫正骨折重叠移位。若单纯的尺骨中、上段骨折有侧方移位者，术者可用“分骨法”整复，使尺骨远段向桡侧移位得到矫正，如若重叠移位在拔伸牵引时尚未能矫正者，亦可用“折顶法”或“回旋法”加以矫正，使骨的重叠、缩短移位得到复位。
+1.整复手法：患者平卧位，在局麻或臂丛麻醉下，肩外展50〜70°，肘屈90°，前臂中立位，一助手握住伤肢拇指及鱼际部，另一手握住余四指，另一助手双手握住上臂，作对拉牵引，矫正骨折重叠移位。若单纯的尺骨中、上段骨折有侧方移位者，术者可用“分骨法”整复，使尺骨远段向桡侧移位得到矫正，如若重叠移位在拔伸牵引时尚未能矫正者，亦可用“折顶法”或“回旋法”加以矫正，使骨的重叠、缩短移位得到复位。
 
 尺骨下段骨折合并有下桡尺关节脱位时，尺骨小头向上脱出，下桡尺关节分离，应先将尺骨骨折端的短缩移位矫正，尺骨小头一般能自然的还纳回桡骨尺切迹的水平位上。此时，术者再用两手掌在尺、桡骨的下端作向轴心位相对夹挤，使下桡尺关节分离移位得到整复。
 
