update ok/hk/hk1gl01-0.5.0.0.0.md. 标题字体缩小 《喉科心法〈潘氏）》〈（

--- a/ok/hk/hk1gl01-0.5.0.0.0.md
+++ b/ok/hk/hk1gl01-0.5.0.0.0.md
@@ -1,8 +1,8 @@
-## 风热喉痹之五（脓菌性咽峡炎）
+## 风热喉痹<small>之五（脓菌性咽峡炎）</small>
 
 本症是急性咽炎、喉炎的严重者。多发生于成人，具有传染性和季节性，也多见于冬春季节，它不仅局部有急性炎症，而且对整个机体和其他器官，也可有不同程度的影响。
 
-《喉科心法〈潘氏）》的“此阳症之中，最急最恶者也。突然而起，暴发暴肿，转肿转大，满喉红丝缠绕，疼痛异常，声音不能出，汤水不能入，痰涎壅塞闭胀，势如绳索绞喉。不急治，即成杀人。治之者必飞骑去救，不可稍缓”。这是本病最典型的描写。
+《喉科心法（潘氏）》的“此阳症之中，最急最恶者也。突然而起，暴发暴肿，转肿转大，满喉红丝缠绕，疼痛异常，声音不能出，汤水不能入，痰涎壅塞闭胀，势如绳索绞喉。不急治，即成杀人。治之者必飞骑去救，不可稍缓”。这是本病最典型的描写。
 
 历代名称：《诸病源候论•伤寒咽喉痛候》：“咽喉不利，或痛而生疮”。又“时气咽喉痛候”：“攻于咽喉，故痛，或生疮也”。又“热病咽喉疮论”：“熏于咽喉，故生疮也”。又“温病咽喉痛候”：“上攻咽喉，故痛，或生疮也”。都是本病。古人习惯上把糜烂、溃疡等都称为疮，因之最初论及本病者，当推《诸病源候论》。《外台秘要》也有“咽喉生疮”一症，但窥其用药，殊不相符。至清代以喉科专著的大量梓行，本病名称也相见繁多起来，如：烂喉风、风热喉《喉科指掌》 风火喉《喉科金钥》 瘟毒喉痹《喉科泄秘》。
 
