--- a/ok/wk/wk03.md
+++ b/ok/wk/wk03.md
@@ -20,7 +20,7 @@
 
 4.望疮疡：
 
-肿疡：皮色焮红者，多属热、属阳：色白者，多属寒、属阴；色灰黑者，多为死肌；色青紫者，多为血瘀：突然凹陷，色转暗红，是走黄内陷的特征。
+肿疡：皮色焮红者，多属热、属阳：色白者，多属寒、属阴；色灰黑者，多为死肌；色青紫者，多为血瘀；突然凹陷，色转暗红，是走黄内陷的特征。
 
 溃疡：其色紫、灰暗不泽者，多难敛难愈；溃疡菜花样突起，或基底部呈珍珠样结合，或如岩穴，外渗血水，疮周色暗红，多见于乳岩、皮肤癌等症。溃疡在胫部内外踝之上，边缘硬突，起“缸口”，疮周色乌黑，或伴有湿疮糜烂、渗液者为臁疮。疮口呈空腔或伴漏管，疮面肉色不鲜，脓水稀薄，并挟有败絮样物，疮口愈合较为缓慢者是瘰疬之溃疡。褥疮溃疡均发生于人体易磨擦的部位，疮面坏死不易脱落，或疮口凹陷甚深，肉色不鲜，日久不易愈合。
 
@@ -48,15 +48,15 @@
 
 外科疾病虽然多数有形可见，但对发病原因、旧病情况、现在病情、以及患者的自觉症状，都必须详细询问。
 
-1.问病因：手足疔疮，多由外伤引起。疔疮受挤压或碰撞后出现高热者，应防“走黄”。乳房结块，坚硬不动，高低不平，经久不消，因情志所伤而引起者，应防患乳岩，臀部红肿，该查问有无注射药物史。右上腹钻顶样疼痛，应查问有无蛔虫病史。出现皮疹者，应询问饮食、用药及敏感物质的皮肤接触史。暴饮暴食可引起胃穿孔；饱餐后过度劳动可引起肠扭转；过度饮酒，过食肥腻，能诱发急性胰腺炎或胆石症等。精神刺激，可成为某些肠结或胆道疾病的主要诱因。
+1.问病因：手足疔疮，多由外伤引起。疔疮受挤压或碰撞后出现高热者，应防“走黄”。乳房结块，坚硬不动，高低不平，经久不消，因情志所伤而引起者，应防患乳岩。臀部红肿，该查问有无注射药物史。右上腹钻顶样疼痛，应查问有无蛔虫病史。出现皮疹者，应询问饮食、用药及敏感物质的皮肤接触史。暴饮暴食可引起胃穿孔；饱餐后过度劳动可引起肠扭转；过度饮酒，过食肥腻，能诱发急性胰腺炎或胆石症等。精神刺激，可成为某些肠结或胆道疾病的主要诱因。
 
-2.问寒热：疮疡初起发寒热，是营。卫不和，经络阻塞，疮毒焮发所致。高热不退，肿痛日增，乃酿脓的征象。疮疡已溃，寒热继作，一般为毒邪未去，正不胜邪，或毒邪流窜，需防内陷。以上，为一般外痈的寒热规律。日晡潮热，五心烦热，为阴虚发热；但寒无热，脉细无力，为阳虚。寒热往来，口苦咽干，胸满胁痛，为肝胆湿热，此为内痈的寒热要点。
+2.问寒热：疮疡初起发寒热，是营卫不和，经络阻塞，疮毒焮发所致。高热不退，肿痛日增，乃酿脓的征象。疮疡已溃，寒热继作，一般为毒邪未去，正不胜邪，或毒邪流窜，需防内陷。以上，为一般外痈的寒热规律。日晡潮热，五心烦热，为阴虚发热；但寒无热，脉细无力，为阳虚。寒热往来，口苦咽干，胸满胁痛，为肝胆湿热，此为内痈的寒热要点。
 
 3.问汗：汗出热退，脉静身凉，是邪去正安之顺证。痈症汗出热退是消散的佳兆。汗出后更烦躁，脉大，为正不胜邪之逆象。痈证汗出热不退，则仍有继发的可能。疮疡兼自汗，多为气血不足。大汗，身热，口渴，腹痛，脉洪大为里实热证。先寒战，后汗出，为“战汗”，乃邪正交争，是病情发展的转折点。汗出如油，气促者，当防虚脱。
 
-4.问二便：肿疡患者，大便秘结，小便黄赤，为火毒湿热内盛。溃疡患者，大便秘结，脉微芤濇，头气血衰弱。痔疮患者，排便时间延长，常有便意。便鲜血者，多为肛门直肠病变。柏油样便，多为上消化道出血。儿童腹部阵痛，而有血性粘液便者，多为肠结。婴幼儿便血，多为直肠瘜肉。大便腥臭者，大便形状变细，当防锁肛痔。肠痈出现大便次数增多，似痢不爽，小便似淋，乃为酿脓内溃的表现。腹痛，腹胀，呕吐，无排便、排气者，应考虑肠结的可能。
+4.问二便：肿疡患者，大便秘结，小便黄赤，为火毒湿热内盛。溃疡患者，大便秘结，脉微芤濇，为气血衰弱。痔疮患者，排便时间延长，常有便意。便鲜血者，多为肛门直肠病变。柏油样便，多为上消化道出血。儿童腹部阵痛，而有血性粘液便者，多为肠结。婴幼儿便血，多为直肠瘜肉。大便腥臭者，大便形状变细，当防锁肛痔。肠痈出现大便次数增多，似痢不爽，小便似淋，乃为酿脓内溃的表现。腹痛，腹胀，呕吐，无排便、排气者，应考虑肠结的可能。
 
-疮疡患者，小便频数，口干引饮，多为伴发消渴。发热而尿黄，量少，为热毒炽盛；尿黄如橘色，且起泡沫者，为黄疽。血尿，常由血热妄行所致，更应注意有否石淋病。尿血而无痛，则应警惕肿瘤的可能。小便频数，排尿困难，尿后余沥，或小便不通，多为前列腺肥大。
+疮疡患者，小便频数，口干引饮，多为伴发消渴。发热而尿黄，量少，为热毒炽盛；尿黄如橘色，且起泡沫者，为黄疸。血尿，常由血热妄行所致，更应注意有否石淋病。尿血而无痛，则应警惕肿瘤的可能。小便频数，排尿困难，尿后余沥，或小便不通，多为前列腺肥大。
 
 5.问饮食：疮疡患者，饮食如常者，病轻，预后佳。病久而不思饮食者，为脾胃已衰病情较重，或疮疡病势进展。腹痛患者，食后痛减，为脾胃虚；食后痛增者，为气滞血瘀或积食。口苦者，肝胆有热；嗳腐酸臭者，胃有宿食；口内甘腻者，脾虚湿盛。
 
@@ -94,11 +94,11 @@
 
 2.触诊，触诊是用手触摸病变的局部，从而辨别疮疡的性质了解疼痛的部位以诊断疾病的一种方法，在外科诊断学中占有重要地位。
 
-疮疡局部触诊：若触之高肿，灼热疼痛为阳证；触之平塌、发凉，不甚疼痛为阴证。颈部肿物，软如棉团者为气瘿。结块坚硬如石，表面高低不平，椎之不移者.可能是癌瘤。
+疮疡局部触诊：若触之高肿，灼热疼痛为阳证；触之平塌、发凉，不甚疼痛为阴证。颈部肿物，软如棉团者为气瘿。结块坚硬如石，表面高低不平，推之不移者，可能是癌瘤。
 
 腹部触诊：痛而拒按多为实证；痛而喜按多为虚证；腹部压痛最明显的部位，往往是病变所在之处。腹部压痛之处固定，则为该部脏器有病。如腹内触及包块，则可能是蛔虫性或绞窄性肠结，或为肿瘤等。
 
-循经络压痛点的触诊：脏腑有病，循其所属或有关经络的循行部位，常可触及有压痛点或有硬结、索条状物。如溃疡病穿孔、胃扩张，可在足三里穴下二寸及梁丘穴下有反应点。肠结，肠穿孔，可在温溜穴及养老穴下有反应点，肠痈在阑尾穴下有反应点。胆道疾患在胆囊穴（阳陵泉下一寸，压痛处）和外丘穴下有反应点，胰腺炎在地机穴下有反应点，等等，此类触诊不但可资辨证，而且在该处针炎治疗，毎获良效。
+循经络压痛点的触诊：脏腑有病，循其所属或有关经络的循行部位，常可触及有压痛点或有硬结、索条状物。如溃疡病穿孔、胃扩张，可在足三里穴下二寸及梁丘穴下有反应点。肠结，肠穿孔，可在温溜穴及养老穴下有反应点。肠痈在阑尾穴下有反应点。胆道疾患在胆囊穴（阳陵泉下一寸，压痛处）和外丘穴下有反应点，胰腺炎在地机穴下有反应点，等等，此类触诊不但可资辨证，而且在该处针灸治疗，每获良效。
 
 复习思考题
 
