update ok/fjx/fjx03-0.1.0.0.0.md. 芒硝三合〈12克）  〈改为（ 更上微火一、两津   “津”改为“沸” 肠燥津伤， ，改为；

--- a/ok/fjx/fjx03-0.1.0.0.0.md
+++ b/ok/fjx/fjx03-0.1.0.0.0.md
@@ -1,10 +1,10 @@
 ## 大承气汤《伤寒论》
 
-〔组成〕大黄四两，酒洗（12克） 厚朴八两，去皮，炙（24克）枳实五枚（15克） 芒硝三合〈12克）
+〔组成〕大黄四两，酒洗（12克） 厚朴八两，去皮，炙（24克）枳实五枚（15克） 芒硝三合（12克）
 
-〔用法〕以水一斗，先煮二物，取五升，去滓，内大黄，更煮取二升，去滓，内芒硝，更上微火一、两津，分温再服。得下，余勿服（现代用法：水煎，大黄后下，芒硝溶服）。
+〔用法〕以水一斗，先煮二物，取五升，去滓，内大黄，更煮取二升，去滓，内芒硝，更上微火一、两沸，分温再服。得下，余勿服（现代用法：水煎，大黄后下，芒硝溶服）。
 
-〔讲解〕本方源于《伤寒论》，本方证是实热积滞结于肠胃，灼伤津液，气机不畅，腑气不通，以阳明腑实为主证。在主证中，前人归纳为“痞、满、燥、实”四字。“痞”是自觉胃脘闷塞压重感；“满”是指脘腹䐜胀感；“燥”是指肠中的粪便既燥且坚，肠燥津伤，“实”是由于津液被邪热消烁，形成实热积滞，是一种有形的热结。总之，此证病变部位在阳明（胃、肠），病因为热实（可由寒化热，或温热病传入中焦）与积滞壅结肠胃，热结则产生燥实，气滞则产生痞满，主证为传导失常之便秘，其证状虽异，病机则同，均是实热积滞内结肠胃所致。因此，治以峻下热结，釜底抽薪，急下存阴。方中大黄苦寒，荡涤胃肠，泻下通便为君药，辅以芒硝咸寒泻热，软坚润燥，二药相须为用，加强泻热通便作用。热实内结，气机闭塞，燥屎不下，故用厚朴、枳实为佐，消痞除满，通畅腑气，助硝黄推荡积滞，四药合用，共奏峻下热结之效。使塞者通，闭者畅，承顺胃气下行，故名曰“承气”汤。
+〔讲解〕本方源于《伤寒论》，本方证是实热积滞结于肠胃，灼伤津液，气机不畅，腑气不通，以阳明腑实为主证。在主证中，前人归纳为“痞、满、燥、实”四字。“痞”是自觉胃脘闷塞压重感；“满”是指脘腹䐜胀感；“燥”是指肠中的粪便既燥且坚，肠燥津伤；“实”是由于津液被邪热消烁，形成实热积滞，是一种有形的热结。总之，此证病变部位在阳明（胃、肠），病因为热实（可由寒化热，或温热病传入中焦）与积滞壅结肠胃，热结则产生燥实，气滞则产生痞满，主证为传导失常之便秘，其证状虽异，病机则同，均是实热积滞内结肠胃所致。因此，治以峻下热结，釜底抽薪，急下存阴。方中大黄苦寒，荡涤胃肠，泻下通便为君药，辅以芒硝咸寒泻热，软坚润燥，二药相须为用，加强泻热通便作用。热实内结，气机闭塞，燥屎不下，故用厚朴、枳实为佐，消痞除满，通畅腑气，助硝黄推荡积滞，四药合用，共奏峻下热结之效。使塞者通，闭者畅，承顺胃气下行，故名曰“承气”汤。
 
 本方为峻下之剂，使用时中病即止，且勿过用，过用耗伤正气；若气虚阴亏，或表证未解，或肠胃无热结，均不宜使用；孕妇禁用。
 
