--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -320,7 +320,7 @@
 
 用法：塞入法是孔窍器官内给药的重要方法，举例说明如下：如生半夏半粒、白芥子七粒、葱头一个，捣烂后，用两层纱布包裹成椭圆形，塞入患乳对侧鼻孔内，至肿痛消失为度。此法对乳痈、乳痘、乳癖有效。
 
-注意事项：塞入药物,应根据病情决定塞入时间，如病人难以耐受即应取出，允其是塞鼻必须严格掌握用量与使用时间，以保安全；塞入药物不可太深，必须便于及时取出。
+注意事项：塞入药物,应根据病情决定塞入时间，如病人难以耐受即应取出，尤其是塞鼻必须严格掌握用量与使用时间，以保安全；塞入药物不可太深，必须便于及时取出。
 
 4.噙化法：噙化法是将药物噙在口中含化，用以治病的方法。噙化即含化，又称噙含。有的在药物溶解过程中吐出涎唾，亦有咽下口津者，方书中称之为"含嚥"。
 
@@ -330,7 +330,7 @@
 
 注意事项：此法只能作为一种辅助疗法应用，凡病较重者，须配合其它内服、外治法治疗。
 
-5.含漱法：含漱法是将药物制备的水溶液，吸入口中然后不停的漱口，以此婆到治疗作用的方法。
+5.含漱法：含漱法是将药物制备的水溶液，吸入口中然后不停的漱口，以此达到治疗作用的方法。
 
 适应证：同噙化法。
 
@@ -342,7 +342,7 @@
 
 （二）应用于特定体表点的外治法
 
-1.点涂法：点涂法是将药膏或药液等涂点在体表某一特定点上，不加覆盖的外治方法。此类似涂法，若要截然划分，尚觉殊难，不过涂法面积大，点法面积小，只星星一点而已。
+1.点涂法：点涂法是将药膏或药液等涂点在体表某一特定点上，不加覆盖的外治方法。此法类似涂法，若要截然划分，尚觉殊难，不过涂法面积大，点法面积小，只星星一点而已。
 
 适应证：适用于痣、疣、小瘜肉，疖等外疡疾患。
 
