--- a/ok/wk/wk05-0.3.0.0.0.md
+++ b/ok/wk/wk05-0.3.0.0.0.md
@@ -170,7 +170,7 @@
 
 〔功用〕养血和营，清热祛风。
 
-〔主治〕营血不足血虚生风所教的瘙痒，隐疹（荨麻疹）、白疕等皮肤病。证见皮肤干燥、落屑、瘙痒等症。
+〔主治〕营血不足血虚生风所致的瘙痒，隐疹（荨麻疹）、白疕等皮肤病。证见皮肤干燥、落屑、瘙痒等症。
 
 〔用法〕水煎服。  
 
