update ok/fjx/fjx09-0.6.0.0.0.md. 1.第五行“出血过多，心【改为必】致阴血耗伤”。 2.第11行“同时可伴有形寒肢泠，面色皖【改为㿠】白等脾阳不足的症状” 3.倒数第十行“〈【改为（】《金匮要略心典·卷下》）”

--- a/ok/fjx/fjx09-0.6.0.0.0.md
+++ b/ok/fjx/fjx09-0.6.0.0.0.md
@@ -4,15 +4,15 @@
 
 〔煎服法〕上七味，以水八升，煮取三升，分温二服（现代用法：先将灶心土水煎取汤，再煎余药。药量按原比例酌减）。
 
-〔讲解〕本方源于《金匮要略》一书，主治脾阳不足所致的便血，以及吐血、衄血、妇人血崩等证。以血色黯淡，四肢不温为其主要症状。治当以温阳止血之法。方中灶心黄土为君药，本品色黄性温，黄为土之色，温乃脾之所喜，又经火烧煅，火乃土之母，土得母燥而性温，故能入中焦以温暖脾阳，且其收敛之性又有止血之功，可标本兼顾。白术、附子温阳健脾，以治其本，共为臣药。然术附温燥，易耗血动血；出血过多，心致阴血耗伤，故配生地、阿胶以滋养阴血，且可止血，白术、附子得阿胶、生地，可制其温燥之性，阿胶、生地与白术、附子相合，又不虑其滋腻呆补，碍阻脾阳，故阿胶、生地、白术、附子四药并用，实有阳得阴助，阴阳两顾之效。更配少量黄芩，取其味苦坚阴之功，亦可制约白术、附子之温燥，又血伤易致阴虚火动，故黄芩还寓清肝止血之效，以上五味共为佐药。甘草为使药，调药和中。诸药共用，温凉并进，刚柔相济，阴阳两调，温阳而不伤阴，滋阴又不碍阳，真可谓配伍得宜，实为温阳止血的有效方剂。
+〔讲解〕本方源于《金匮要略》一书，主治脾阳不足所致的便血，以及吐血、衄血、妇人血崩等证。以血色黯淡，四肢不温为其主要症状。治当以温阳止血之法。方中灶心黄土为君药，本品色黄性温，黄为土之色，温乃脾之所喜，又经火烧煅，火乃土之母，土得母燥而性温，故能入中焦以温暖脾阳，且其收敛之性又有止血之功，可标本兼顾。白术、附子温阳健脾，以治其本，共为臣药。然术附温燥，易耗血动血；出血过多，必致阴血耗伤，故配生地、阿胶以滋养阴血，且可止血，白术、附子得阿胶、生地，可制其温燥之性，阿胶、生地与白术、附子相合，又不虑其滋腻呆补，碍阻脾阳，故阿胶、生地、白术、附子四药并用，实有阳得阴助，阴阳两顾之效。更配少量黄芩，取其味苦坚阴之功，亦可制约白术、附子之温燥，又血伤易致阴虚火动，故黄芩还寓清肝止血之效，以上五味共为佐药。甘草为使药，调药和中。诸药共用，温凉并进，刚柔相济，阴阳两调，温阳而不伤阴，滋阴又不碍阳，真可谓配伍得宜，实为温阳止血的有效方剂。
 
 临床应用本方时，灶心土难于筹备，故多用赤石脂代替。赤石脂性温，味甘涩，具有良好的温中收敛止血的作用。若有外邪者，不宜使用本方。
 
-〔临证应用〕本方是治疗脾阳不足所致的便血、吐血、衄血、崩漏等证的代表方剂。其症可见出血的血色黯淡，四肢不温，面色萎黄，舌淡苔白，脉沉细无力。尤多常用于治疗便血，其特点是大便出血，色暗淡，先便后血，同时可伴有形寒肢泠，面色皖白等脾阳不足的症状。所以临床本方加白芨粉、三七粉、乌贼骨治疗脾胃虚寒的胃肠出血病，其效果确著。
+〔临证应用〕本方是治疗脾阳不足所致的便血、吐血、衄血、崩漏等证的代表方剂。其症可见出血的血色黯淡，四肢不温，面色萎黄，舌淡苔白，脉沉细无力。尤多常用于治疗便血，其特点是大便出血，色暗淡，先便后血，同时可伴有形寒肢泠，面色㿠白等脾阳不足的症状。所以临床本方加白芨粉、三七粉、乌贼骨治疗脾胃虚寒的胃肠出血病，其效果确著。
 
 常用加减法：若胃纳差，可将阿胶改为阿胶珠，以减其滋腻之性；气虚甚者可加党参益气摄血；出血多者，酌加三七、白芨、炮姜、艾叶等温中止血；便溏者，黄芩炒炭，以减其苦寒之性，再加炮姜温中止血。
 
-〔文献摘录〕尤在泾：“下血，先便后血者，由脾虚气寒，失其统御之权，而血为之不守也。脾去肛门远，故曰远血。黄土温燥入脾，合白术、附子以复健行之气；阿胶、生地黄、甘草益脱竭之血；而又虑辛温之品，转为血病之后，故又以黄芩之苦寒，防其太过，所谓有制之师也。”〈《金匮要略心典·卷下》）
+〔文献摘录〕尤在泾：“下血，先便后血者，由脾虚气寒，失其统御之权，而血为之不守也。脾去肛门远，故曰远血。黄土温燥入脾，合白术、附子以复健行之气；阿胶、生地黄、甘草益脱竭之血；而又虑辛温之品，转为血病之后，故又以黄芩之苦寒，防其太过，所谓有制之师也。”（《金匮要略心典·卷下》）
 
 复习思考题
 
