update ok/wk/wk12-0.6.0.0.0.md. 1、在（一）辨治要领的第一段文字中糜烂、滋水，故总属湿热之毒，的后面“但发于上部与下部者有兼风、蒹湿之异”，这个兼风没问题，后面的”蒹湿“是否应为兼湿？ 2、在常见证治风热部分：有境界清楚鲜明或有针头大红色”大疹“，原文为”红色丘疹“，已做修改。 3、外治法中1.以潮红、丘疹为主者，用三黄洗剂外搽，或用青黛散“冷幵水”调敷，原文为冷开水调敷，已做修改。

--- a/ok/wk/wk12-0.6.0.0.0.md
+++ b/ok/wk/wk12-0.6.0.0.0.md
@@ -24,7 +24,7 @@
 
 （三）常见证治
 
-1.风热：皮肤红斑色泽淡红或鲜红甚则紫暗，境界清楚鲜明或有针头大红色庄疹，多发于人体上部，分布密集，全身有发热、头痛、心烦少寐，大便秘结，小便黄赤，舌红苔黄燥，脉滑数。
+1.风热：皮肤红斑色泽淡红或鲜红甚则紫暗，境界清楚鲜明或有针头大红色丘疹，多发于人体上部，分布密集，全身有发热、头痛、心烦少寐，大便秘结，小便黄赤，舌红苔黄燥，脉滑数。
 
 治法：疏风清热，化湿止痒。
 
@@ -40,7 +40,7 @@
 
 （四）外治法
 
-1.以潮红、丘疹为主者，用三黄洗剂外搽，或用青黛散冷幵水调敷，每日4〜5次。
+1.以潮红、丘疹为主者，用三黄洗剂外搽，或用青黛散冷开水调敷，每日4〜5次。
 
 2.肿胀、糜烂、流滋较多者，用蒲公英或野菊花30克，或用地肤子汤煎汤待冷后湿敷；亦可用10﹪黄柏溶液湿敷。
 
