update ok/fjx/fjx04-0.3.0.0.0.md. 原文：然洽心肾则有余 改为：然治心肾则有余 电子教材为：治，网络教材为：洽

--- a/ok/fjx/fjx04-0.3.0.0.0.md
+++ b/ok/fjx/fjx04-0.3.0.0.0.md
@@ -14,4 +14,4 @@
 
 本方与清营汤均以犀角、生地为重，用治热入营血之身热夜甚，烦躁不眠，昏谵舌绛等症。然本方纯由血分药组成，清热凉血中辅以散瘀之品，用治热盛动血之症；清营汤则于清营泄热中配以清气药，使透热转气，气营两清，以防邪陷心包或热盛动血，所以治邪热初入营分之证。
 
-〔方论选录〕费伯雄：“犀角化斑，解毒，凉血清心，又能引地黄直达肾经，壮水制火，故吐衄症中多用之。然洽心肾则有余，而非肺肝之正药，若治衄血等，不如羚羊角之效，至谓升麻可代犀角则其说尤谬，既有郁火再加风药，逼血上，不旋踵而败矣。”（《医方论》）
+〔方论选录〕费伯雄：“犀角化斑，解毒，凉血清心，又能引地黄直达肾经，壮水制火，故吐衄症中多用之。然治心肾则有余，而非肺肝之正药，若治衄血等，不如羚羊角之效，至谓升麻可代犀角则其说尤谬，既有郁火再加风药，逼血上，不旋踵而败矣。”（《医方论》）
