update ok/gl/gl03-0.9.1.0.0.md. 伤科： “左乳下一寸六分为[乳根]穴，属肝经。拳打重者，吐血死”“右乳下一寸六分[乳根]穴，属肺经。拳打重者，九日死；或两鼻出血必死”，因PDF 原版前后前后两句刚好在引号处换行，无逗号分隔，转电子版。参考前面语句格式，缺失逗号。补全 改为 吐血死”，“右乳下

--- a/ok/gl/gl03-0.9.1.0.0.md
+++ b/ok/gl/gl03-0.9.1.0.0.md
@@ -18,7 +18,7 @@
 
 妇科：奇经[中冲](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.1.3.9.md)、任、督三脉皆起于胞宫，而经带、胎产等妇科疾患又主要与胞宫相关，所以，妇科中的疾患多责之于任、督、冲三脉。如月经病，多从冲任二脉辨证论治。
 
-伤科：在应用经络辨证方面，首先观察所伤之处何经通过，从而断定其伤属何经，为下一步治疗打下基础，如跌打损伤，瘀血积于胁下，则从肝经辨治等。伤科更有从损伤是否在经络上某些特定穴位，来辨损伤程度、预后及治法的。如清•赵廷海《救伤秘旨》曾记载了易致人死命的三十六个部位（“三十六大穴”），如“头脑后为枕骨，管十二经，又名督脉，一身之主，不可损伤。打重者脑骨髓伤，多则七日，少则五日必死；极重者或一日即死”，“心口下一寸五分为[巨阙](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.13.md)穴，为心募。打重者，人事不省”，“左乳下一寸六分为[乳根](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.18.md)穴，属肝经。拳打重者，吐血死”“右乳下一寸六分[乳根](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.18.md)穴，属肺经。拳打重者，九日死；或两鼻出血必死”，等等。虽然这里的经穴名称及其所属经络系统与传统经络学说有相异之处，但其实质却是相同的。
+伤科：在应用经络辨证方面，首先观察所伤之处何经通过，从而断定其伤属何经，为下一步治疗打下基础，如跌打损伤，瘀血积于胁下，则从肝经辨治等。伤科更有从损伤是否在经络上某些特定穴位，来辨损伤程度、预后及治法的。如清•赵廷海《救伤秘旨》曾记载了易致人死命的三十六个部位（“三十六大穴”），如“头脑后为枕骨，管十二经，又名督脉，一身之主，不可损伤。打重者脑骨髓伤，多则七日，少则五日必死；极重者或一日即死”，“心口下一寸五分为[巨阙](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.13.md)穴，为心募。打重者，人事不省”，“左乳下一寸六分为[乳根](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.18.md)穴，属肝经。拳打重者，吐血死”，“右乳下一寸六分[乳根](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.18.md)穴，属肺经。拳打重者，九日死；或两鼻出血必死”，等等。虽然这里的经穴名称及其所属经络系统与传统经络学说有相异之处，但其实质却是相同的。
 
 其它如儿科中察苗窍、察虎口三关等进行望诊的方法，都是以经络学说为理论依据而判定病属何经。
 
