--- a/ok/wk/wk05-0.3.0.0.0.md
+++ b/ok/wk/wk05-0.3.0.0.0.md
@@ -198,7 +198,7 @@
 
 〔功用〕泻肝胆实火，清三焦湿热，
 
-〔主治〕肝经湿热实火所致乳发、缠腰火丹；肝胆湿热下注所致的子痈、囊痈，湿疮等。证见胁肋部疱疹，色红，呈簇排列，疼痛难忍，阴部及下肢有丘庖疹，瘙痒，糜烂，渍水淋漓，舌红苔黄腻，脉弦数。
+〔主治〕肝经湿热实火所致乳发、缠腰火丹；肝胆湿热下注所致的子痈、囊痈，湿疮等。证见胁肋部疱疹，色红，呈簇排列，疼痛难忍，阴部及下肢有丘疱疹，瘙痒，糜烂，渍水淋漓，舌红苔黄腻，脉弦数。
 
 〔用法〕水煎服，或用成药水丸，每服9克，日服二次。
 
@@ -240,7 +240,7 @@
 
 〔功用〕祛风化痰，定风止痉。
 
-〔主治〕破伤凤。证见牙关紧急，口撮唇紧，身体强直，角弓反张，脉弦紧。
+〔主治〕破伤风。证见牙关紧急，口撮唇紧，身体强直，角弓反张，脉弦紧。
 
 〔用法〕每次3至6克，热酒调服，亦可煎服。
 
