--- a/ok/bc/bc03-0.2.5.0.0.md
+++ b/ok/bc/bc03-0.2.5.0.0.md
@@ -1,7 +1,7 @@
 ### 苦参
 
 **〔原文〕苦燥湿，寒胜热。沉阴主肾，补阴益精，养肝胆，安五脏**，湿热去则血气和平，而五脏自安。**利九**
-**窍，生津止渴，明目止泪**。泪为肝热。**治温病血痢，**纯下清血者，风伤肝也，宜散风凉血；下如豆汁者，湿伤脾也，宜清热渗湿。**肠风溺赤，黄疸酒毒。热生风，湿生虫，又能祛风逐水杀虫。治大风疥癞**(1)。**然大苦大寒，肝肾虚而无热者勿服**。张从正曰：凡药皆毒也，虽苦参、甘草，不可不谓之毒，久服必偏胜为患。经曰：五味入胃，各归所喜攻，久而增气，物化之常也。气增而大，夭之由也。主冰注曰：气增不已，则脏有偏胜，偏胜则脏有偏绝，故令人暴夭。《笔谈》曰：久用苦参擦牙，遂病腰痛，由其气伤肾也。经又月：大毒治病，十去其六；无毒治病，十去其九；谷肉果菜，食养尽之，无使过之，伤其正也。按人参补脾，沙参补肺，紫参补肝，丹参补心，玄参补肾，苦参不在五参之内，然名参者皆补也。药能医病，不能养人；食能养人，不能医病。**糯米泔浸去腥气，蒸用。玄参为使，恶贝母、菟丝子、漏芦、反藜葫**。苦参一两，或酒煎，或醋煮，能吐天行时毒。
+**窍，生津止渴，明目止泪**。泪为肝热。**治温病血痢，**纯下清血者，风伤肝也，宜散风凉血；下如豆汁者，湿伤脾也，宜清热渗湿。**肠风溺赤，黄疸酒毒。热生风，湿生虫，又能祛风逐水杀虫。治大风疥癞**(1)。**然大苦大寒，肝肾虚而无热者勿服**。张从正曰：凡药皆毒也，虽苦参、甘草，不可不谓之毒，久服必偏胜为患。经曰：五味入胃，各归所喜攻，久而增气，物化之常也。气增而大，天之由也。王冰注曰：气增不已，则脏有偏胜，偏胜则脏有偏绝，故令人暴夭。《笔谈》曰：久用苦参擦牙，遂病腰痛，由其气伤肾也。经又月：大毒治病，十去其六；无毒治病，十去其九；谷肉果菜，食养尽之，无使过之，伤其正也。按人参补脾，沙参补肺，紫参补肝，丹参补心，玄参补肾，苦参不在五参之内，然名参者皆补也。药能医病，不能养人；食能养人，不能医病。**糯米泔浸去腥气，蒸用。玄参为使，恶贝母、菟丝子、漏芦、反藜葫**。苦参一两，或酒煎，或醋煮，能吐天行时毒。
 
 【讲解】（1）癞：即疠风，又名大风、大麻风、麻风。为接触传染性皮肤疾病。
 
