update ok/hk/hk1gl01-0.6.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.6.0.0.0.md
+++ b/ok/hk/hk1gl01-0.6.0.0.0.md
@@ -1,4 +1,4 @@
-## 虚火喉痹之一（慢性咽炎）
+## 虚火喉痹<small>之一（慢性咽炎）</small>
 
 慢性咽炎，是旷日持久的慢性咽部病变，尽管病变位置明明在咽部，可是中医在习惯上还是称为喉痹或喉风。充其量讲究一些的话，在上面再冠以“慢”或“阴虚”来区别于急性的。
 
