update ok/bc/bc03-0.4.17.0.0.md. —切 改为 一切

--- a/ok/bc/bc03-0.4.17.0.0.md
+++ b/ok/bc/bc03-0.4.17.0.0.md
@@ -8,6 +8,6 @@
 
  本品甘寒淡渗，入心、胃经。能清心胃之热而解毒，消暑除烦而止渴，并兼能利尿。凡中巴豆、附子等诸热药及酒食诸毒，大量服之，均可解救，故为解毒良药。用以解除暑热烦渴，疮疡肿毒等证，亦均有效。	
 
- 【临证应用】绿豆用于暑热烦渴，热病津伤之证，以及夏令炎热之际，均可单味煎汤饮服，以消暑、除烦、止渴。用治痈肿疮毒，单用本品煎汤频饮；用于砒石、附子、巴豆、苍耳草等—切草木金石诸药中毒，均可连皮生研，冷开水浸泡，绞汁顿服。亦可与黄连、甘草等同用，以增清热解毒之效。外用，与大黄研末，用鲜薄荷打汁调涂治疮痈，丹毒红肿热痛之证。
+ 【临证应用】绿豆用于暑热烦渴，热病津伤之证，以及夏令炎热之际，均可单味煎汤饮服，以消暑、除烦、止渴。用治痈肿疮毒，单用本品煎汤频饮；用于砒石、附子、巴豆、苍耳草等一切草木金石诸药中毒，均可连皮生研，冷开水浸泡，绞汁顿服。亦可与黄连、甘草等同用，以增清热解毒之效。外用，与大黄研末，用鲜薄荷打汁调涂治疮痈，丹毒红肿热痛之证。
 
 【用量用法】30-60克。消暑止渴，可煮服； 解毒急救，宜冷开水浸泡，连皮生研绞汁服。外用适量。
