update ok/hk/hk1gl01-0.7.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.7.0.0.0.md
+++ b/ok/hk/hk1gl01-0.7.0.0.0.md
@@ -1,4 +1,4 @@
-## 虚火喉痹之二（慢性喉炎）
+## 虚火喉痹<small>之二（慢性喉炎）</small>
 
 慢性喉炎，是喉部粘膜的慢性炎性病变，也可累及粘膜下层及喉内肌。但中医一向喉和咽不分界限，所以也和慢性咽炎一样地称为虚火喉痹、阴虚喉痹、慢喉风、慢喉痹等。以喉炎的特征为嘶哑，绝大多数还归类于“瘖”、“喑”、“失音”一门中讨论。
 
