--- a/ok/bc/bc03-0.3.1.0.0.md
+++ b/ok/bc/bc03-0.3.1.0.0.md
@@ -9,6 +9,6 @@
 
 本品性属阴寒，味兼苦咸。归心、肝、胃三经。入心、肝血分，则可凉血定惊；入阳明胃经，又能清热解毒，尤善清心经邪热，解血分热毒而为清心火、解血毒之专病。故凡一切热证，邪入心肝之高热神昏，痉厥抽搐，或温毒内陷营血之发斑发黄，以及热盛迫血妄行之吐衄下血等证，均为要品。其气清香，有清透不遏之功，故对斑疹热毒壅盛、不能透发者，用之尤佳。此外，也可用治热毒壅盛的疮疡肿毒或疔毒走黄等证。寒凉之品，血分之药，非热入营血者不宜轻用。
 
-【临证应用】犀角用于温热病，热盛火炽，壮热不退，神昏谵语，常与连翘、麦冬、元参等配伍，如清宫汤；对温热病邪热入营，而见烦渴舌赤，夜寐不安者，可配银花、黄连、玄参等药以清营透热，如清营汤。若热陷心肝，症见'热烦躁、惊厥抽搐者，又常与羚羊角等息风止痉药配伍，如紫雪丹。用于血热妄行的吐血衄血等症，本品有较强的凉血止血作用，常与生地、丹皮等配伍，如犀角地黄汤。若温热病，热毒炽盛，发斑发疹，其色紫暗以及发黄者，常与石膏、玄参等配伍，如化斑汤。发黄则与清热解毒的大青叶、栀子等配伍，如犀角大青汤。疔疮痈肿，由于热毒壅盛而病势严重者，也可用本品以清解热毒。
+【临证应用】犀角用于温热病，热盛火炽，壮热不退，神昏谵语，常与连翘、麦冬、元参等配伍，如清宫汤；对温热病邪热入营，而见烦渴舌赤，夜寐不安者，可配银花、黄连、玄参等药以清营透热，如清营汤。若热陷心肝，症见高热烦躁、惊厥抽搐者，又常与羚羊角等息风止痉药配伍，如紫雪丹。用于血热妄行的吐血衄血等症，本品有较强的凉血止血作用，常与生地、丹皮等配伍，如犀角地黄汤。若温热病，热毒炽盛，发斑发疹，其色紫暗以及发黄者，常与石膏、玄参等配伍，如化斑汤。发黄则与清热解毒的大青叶、栀子等配伍，如犀角大青汤。疔疮痈肿，由于热毒壅盛而病势严重者，也可用本品以清解热毒。
 
 【用量用法】	1 — 3克，多制散冲服，或磨汁服。孕妇慎用。畏川乌、草乌。
