update ok/gl/gl07-0.2.1.9.0.md. 积实 改为 枳实

--- a/ok/gl/gl07-0.2.1.9.0.md
+++ b/ok/gl/gl07-0.2.1.9.0.md
@@ -16,6 +16,6 @@
 
 4、消补并用
 
-消补并用，就是把消导和补益结合起来使用的方法，如脾胃素弱，消化不良，复又不慎饮食，以致食积停滞，而现脘腹痞满，倦怠少气，饮食不进等症，用积实消痞丸治疗，方中有[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)，[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)以补脾胃，[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)消痞导滞，就是消补并用之例。其它凡属内有积聚，而又正气衰弱的患者，都可用此法治疗。
+消补并用，就是把消导和补益结合起来使用的方法，如脾胃素弱，消化不良，复又不慎饮食，以致食积停滞，而现脘腹痞满，倦怠少气，饮食不进等症，用枳实消痞丸治疗，方中有[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)，[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)以补脾胃，[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)消痞导滞，就是消补并用之例。其它凡属内有积聚，而又正气衰弱的患者，都可用此法治疗。
 
 总之，两法并用，必须在熟习了八法的规律之后，才能灵活运用，相得益彰。同时又必须懂得八法的配合运用的精神，才能进一步发挥疗效。
