update ok/gl/gl07-0.2.1.8.0.md. 积实 改为 枳实

--- a/ok/gl/gl07-0.2.1.8.0.md
+++ b/ok/gl/gl07-0.2.1.8.0.md
@@ -14,7 +14,7 @@
 
 消食导滞：适用于食积停滞之证，症见胸脘痞满，腹胀时痛，嗳腐吞酸，噁心呕吐，食欲不振，或大便泄泻，或便秘，舌苔厚腻，脉滑。代表方剂为[保和丸](https://www.gmzyjc.com/read/fjx/fjx06-0.1.0.0.0.md)、[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)导滞丸。
 
-消痞化积：适用于脾胃虚弱，食积内停之证，症见食少难消，脘腹痞胀，食少不化，大便不畅或溏薄，舌苔黄腻，脉实。代表方剂为积实消痞丸、健脾丸、枳术丸。
+消痞化积：适用于脾胃虚弱，食积内停之证，症见食少难消，脘腹痞胀，食少不化，大便不畅或溏薄，舌苔黄腻，脉实。代表方剂为枳实消痞丸、健脾丸、枳术丸。
 
 软坚消结：适用于瘰疠、痰核、瘿瘤、癥瘕、积聚、各种结石证。代表方剂为海藻玉壶汤、消瘰丸、[鳖甲](https://www.gmzyjc.com/read/bc/bc17-0.4.15.0.0.md)煎丸、排石汤。
 
