update ok/yk/yk1gl06-0.4.0.0.0.md. 积壳 改为 枳壳

--- a/ok/yk/yk1gl06-0.4.0.0.0.md
+++ b/ok/yk/yk1gl06-0.4.0.0.0.md
@@ -88,6 +88,6 @@
 
 诊断：左眼目偏视、睑废证。
 
-据脉证，脉虽沉细，但头痛剧，属风邪较重，在治则上应舍脉从证，法当健脾散风，疏通脉络。用羌活胜风汤加减（羌活、银柴胡、黄芩、白术、积壳、防风、前胡、薄荷、全蝎、桔梗、勾藤、甘草），服六剂，并配合针刺疗法，头痛大减，上睑下垂及睛珠外斜显著好转。但头晕心悸，腿胀乏力，又接上方加生牡蛎9克，夏枯草15克，牛膝9克，远志9克，炒枣仁9克，服七剂，头痛头晕均愈，眼睑睁合如常，眼珠转动自如，复视完全消失。至此，嘱其依上方再服，以善其后。愈后观察两个月，情况良好。（《中医眼科临床实践》）
+据脉证，脉虽沉细，但头痛剧，属风邪较重，在治则上应舍脉从证，法当健脾散风，疏通脉络。用羌活胜风汤加减（羌活、银柴胡、黄芩、白术、枳壳、防风、前胡、薄荷、全蝎、桔梗、勾藤、甘草），服六剂，并配合针刺疗法，头痛大减，上睑下垂及睛珠外斜显著好转。但头晕心悸，腿胀乏力，又接上方加生牡蛎9克，夏枯草15克，牛膝9克，远志9克，炒枣仁9克，服七剂，头痛头晕均愈，眼睑睁合如常，眼珠转动自如，复视完全消失。至此，嘱其依上方再服，以善其后。愈后观察两个月，情况良好。（《中医眼科临床实践》）
 
 按：本例目偏视属风邪阻络，故拟疏风通络之法治之，佐以健脾。羌活胜风汤加全蝎、钩藤，与小续命汤之方义相似。
