update ok/fjx/fjx08-0.2.0.0.0.md. 积壳 --> 枳壳

--- a/ok/fjx/fjx08-0.2.0.0.0.md
+++ b/ok/fjx/fjx08-0.2.0.0.0.md
@@ -14,4 +14,4 @@
 
 本方与四磨饮子均有破滞降逆之功，主治肝气横逆之喘闷不食之证，但四磨饮子内有人参兼顾其虚，寓攻于补，正邪两顾，而本方去参加木香、枳壳，功专降逆顺气，宜用于体壮气滞之实证。
 
-〔文献摘录〕张秉成：“大抵此方所治，皆为忧愁思怒得之者多。因思则气结，怒则气上，忧愁不已，气多厥逆，故为上气喘急，烦闷不食等证。然气之所逆者，实也。实者泻之，故以槟榔、沉香之破气快膈、峻利之品，可升可降者，以之为君。而以乌药之宣行十二经气分者助之。其所以致气之逆者，虚也。若元气充足，经脉流行，何有前证？故以人参辅其不逮，否则气暂降而郁暂开，不久又闭矣。是以古人每相需而行也。若纯实无虚者，即可去参加积壳。”（《成方便读》）
+〔文献摘录〕张秉成：“大抵此方所治，皆为忧愁思怒得之者多。因思则气结，怒则气上，忧愁不已，气多厥逆，故为上气喘急，烦闷不食等证。然气之所逆者，实也。实者泻之，故以槟榔、沉香之破气快膈、峻利之品，可升可降者，以之为君。而以乌药之宣行十二经气分者助之。其所以致气之逆者，虚也。若元气充足，经脉流行，何有前证？故以人参辅其不逮，否则气暂降而郁暂开，不久又闭矣。是以古人每相需而行也。若纯实无虚者，即可去参加枳壳。”（《成方便读》）
