--- a/ok/qs/qs01_02.md
+++ b/ok/qs/qs01_02.md
@@ -2,7 +2,7 @@
 
 **1.五色既审，五音当明。声为音本，音以声生。声之余韵，音遂以名。角徵宫商，并羽五声。 **
 
-**五色** 黄、青、黑、白、赤。**五音** 角、徵、宫、商、羽。本 根本。**韵**yūn，读运。遂Sui，读岁，于是。**徵**zhi，读止。
+**五色** 黄、青、黑、白、赤。**五音** 角、徵、宫、商、羽。本 根本。**韵**yūn，读运。遂suì，读岁，于是。**徵**zhǐ，读止。
 
 前面学习了五色的诊断方法，此节主要讲五音五声，以及五音与五声的诊断方法。
 
@@ -10,15 +10,15 @@
 
 **2.中空有窍，故肺主声。喉为声路，会厌门户。舌为声机，唇齿扇助。宽隘锐钝，厚薄之故。**
 
-**会厌** 又名吸门，覆于气爰上口，呼吸和发音时则开启，饮食吞咽或呕吐时则关闭，以防异物误入气道。**机** 枢机。**隘**ai，读艾，狭窄。
+**会厌** 又名吸门，覆于气爰上口，呼吸和发音时则开启，饮食吞咽或呕吐时则关闭，以防异物误入气道。**机** 枢机。**隘**ài，读艾，狭窄。
 
 大凡中空而有孔窍的物体多能发声，肺也是中空有窍的所以肺主声。喉咙是声音的通道，会厌是声音的门户，舌头是声音的枢机。发声还必须有口唇、牙齿活动的辅助。因各人的喉咙、会厌有宽阔、狭窄的不同，口唇有厚薄的差异，所以发出的声音也就有尖锐钝圆的不同。
 
-此说明了声音产生的机理。声音的产生是由肺、喉、会厌、舌、唇、齿等器官共同协作完成的。人的声音各具特点，是由于发声器官禀赋（brng fu，读丙副，先天素质）有宽隘厚薄等差异的缘故。
+此说明了声音产生的机理。声音的产生是由肺、喉、会厌、舌、唇、齿等器官共同协作完成的。人的声音各具特点，是由于发声器官禀赋（bǐng fù，读丙副，先天素质）有宽隘厚薄等差异的缘故。
 
 **3.舌居中发，喉音正宫，极长下浊，沉厚雄洪。开口张腭，口音商成，次长下浊，铿锵肃清。撮口唇音，极短高清，柔细透彻，尖利羽声。舌点齿音，次短高清，抑扬咏越，徵声始通。角缩舌音，条畅正中，长短高下，清浊和平。**
 
-**腭** è，读厄。分膈口腔和鼻腔的组织，前部叫硬腭，后部叫软腭，通称上膛。**铿锵** Keng qiang，读坑枪，响亮而有节奏。**撮**cuo，读磋，韵母是ü或以ü起头的叫撮口呼。**抑扬**（声音）高低起伏。**咏越** 咏，依着一定的腔调缓慢地诵读。越，（声音、情感）昂扬。
+**腭** è，读厄。分膈口腔和鼻腔的组织，前部叫硬腭，后部叫软腭，通称上膛。**铿锵** kēng qiāng，读坑枪，响亮而有节奏。**撮**cuō，读磋，韵母是ü或以ü起头的叫撮口呼。**抑扬**（声音）高低起伏。**咏越** 咏，依着一定的腔调缓慢地诵读。越，（声音、情感）昂扬。
 
 宫、商、羽、徵、角音均为正音，也就是五脏无病时的正常声音。宫音，是舌头位在口腔正中，从喉发音。其声音极长、极低下、极重浊，且深沉、浑厚、雄壮而洪亮。商音，是开口张腭，从口腔发音，其声音次于宫音的长、低、浊，有节奏而清脆响亮。羽音，是撮起口唇发音，其音极短促，调髙而清脆，柔和细腻而尖锐。徵音，是舌尖抵着牙齿发音，其音次于羽音的短促、高清，有着抑扬清越的余韵。角音，是舌头向里收缩发音，它的声音长、短、高、下、清、浊都比较和调，有条达、畅爽、适中的余韵。
 
@@ -84,7 +84,7 @@
 
 **虚实寒热从声别，闻而知之无遁情。**
 
-**聆**líng，读灵，听。 **颤**zhàn，读战，发抖。 **昭**zhāo，读招，明显。 **啼**ti，读题，有声无泪。 **嗞**zī，读资，小动物的叫声。**嘎**shà，读沙，嗓音嘶哑。 **遁**dun，读盾，逃走。
+**聆**líng，读灵，听。 **颤**zhàn，读战，发抖。 **昭**zhāo，读招，明显。 **啼**tí，读题，有声无泪。 **嗞**zī，读资，小动物的叫声。**嘎**shà，读沙，嗓音嘶哑。 **遁**dùn，读盾，逃走。
 
 诊察小儿的方法之一是仔细地闻听声音，才能明察病情的变化。五声是从相应的五脏发出的，从五声的变化可以了解到五脏的病情。如心有病时声音急促且多语多笑；肺有病时声音悲浊不清；肝有病时多狂叫呼喊；脾有病时声音轻微颤抖；肾有病时声音长细呻吟。以上五种声音明显表示出来后，属什么脏的病证也就清楚了。另外，诊察小儿啼哭时也有不同情况，干哭有声而无眼泪的多为腹痛；哭而多泪就要考虑到是惊风将要发作了。如果发出类似小动物叫的叹息声而又烦躁不安的多属心经内热生烦；声音嘶哑且沉重的多为外感风寒；气有余的实证，声音多雄壮响亮；不足的虚证，声音多短促轻微；语言多而身体发热的，多属阳证、腑证。反之，少言语而身体寒凉的，多属阴证、脏证。狂言乱语烦躁不安的，是邪热极盛；如果出现了说胡话、神志昏迷，是邪入心包的表现，病多凶险，预后不良。如果声音象鸭叫，在喉中哑然难出，或声音急促不能回转，且哭而无泪的，多属于正气衰败，生命垂危。总之，疾病的寒热虚实是可以从声音中辨別的，听到了什么声音，就能知道是什么性质的疾病。
 
