--- a/ok/qs/qs01_03.md
+++ b/ok/qs/qs01_03.md
@@ -8,7 +8,7 @@
 
 **肾主五液，心汗肝泣，自入为唾，脾涎肺涕。**
 
-**臊**Sao，读骚，象尿或狐狸的气味。**五入** 五臭五味入五脏。
+**臊**sāo，读骚，象尿或狐狸的气味。**五入** 五臭五味入五脏。
 
 闻声察色的方法已经进行了详细阐述，问诊也应当明了。要考察问诊中的五臭、五味入五脏的情况，才能知道病情的始末。心是主五臭的，其中又分焦入心，香入脾，腐入肾，腥入肺，臊入肝。脾是主五味的，但其中又分甘入脾，酸入肝，苦入心，辛入肺，咸入肾。肾是主五液的，但其中又分为心主汗液，肝主泣（眼泪），肾主唾液，脾主涎，肺主涕。
 
@@ -78,29 +78,29 @@
 
 ### **附2：幼科审病歌诀**（《医宗金鉴•幼科心法要诀》)
 
-**审儿之病贵详参，要在安烦苦欲间，**
+**审儿之病贵详参，要在安烦苦欲间。**
 
 **能食不食渴不渴，二便调和通秘勘。**
 
-**发热无汗为表病，内热便硬作里看，**
+**发热无汗为表病，内热便硬作里看。**
 
 **安烦昼夜阴阳证，苦热冷暧定热寒。**
 
-**能食不食胃壮弱，渴与不渴胃湿干，**
+**能食不食胃壮弱，渴与不渴胃湿干。**
 
 **便稠粘秽为滞热，尿清不赤乃寒占。**
 
-**耳尻肢凉知痘疹，指梢发冷主惊痫，**
+**耳尻肢凉知痘疹，指梢发冷主惊痫。**
 
 **肚腹热闷乃内热，四肢厥冷是中寒。**
 
-**眉皱曲啼腹作痛，风热来临耳热缠，**
+**眉皱曲啼腹作痛，风热来临耳热缠。**
 
 **腹痛须按软与硬，喜按不喜虚实参。**
 
 **欲保赤子诚心辨，对证施方治不难。**
 
-**勘**kān，读刊，实地查看。 **秽**hui，读会，肮脏。 **尻**kao，读考（平声），尾骶骨部位 **痫**Xian，读贤，癫痫。
+**勘**kān，读刊，实地查看。 **秽**huì，读会，肮脏。 **尻**kāo，读考（平声），尾骶骨部位 **痫**xián，读贤，癫痫。
 
 审察小儿的疾病重要的是详细，要注意是否安静与烦躁，有没有能觉察到的痛苦，喜好的是什么。其次饮食怎样，能食还是不能食。大小便是否调和，是通利还是秘结，都要细看。发热是否有汗出，无汗的是病邪在表，内热盛而大便坚硬是邪气在里。若白天烦热而夜晚安静，属阳证；夜间烦热而白天安静，属阴证。喜冷属热证，喜暖属寒证。能食是胃气强壮，不能食属胃气虚弱。口渴为胃中干燥，口不渴为胃中湿盛。大便稠粘、秽气难闻是内有滞热。小便清长、色白不黄是寒证。如果耳梢和尾骶骨部位及四肢发凉，多为痘疹将发。手指尖发冷是惊风癫痫欲发的先兆。腹部热而烦闷，多为内热，四肢厥冷是中焦虚寒。小儿突然皱眉头曲腰啼哭多为腹痛发作，外感风热常常两耳发热。腹痛喜按且按之柔软的为虚证，拒按而且按之坚硬的为实证。
 
