update ok/bc/bc08.md. 按照扫描版修改：1）禁忌“征”改为“证”；2）1处标点符号。

--- a/ok/bc/bc08.md
+++ b/ok/bc/bc08.md
@@ -6,7 +6,8 @@
 〔面授时数〕1学时
 〔目的要求〕
 
-1. 了解开窍药的作用和适用证、禁忌征。
+1. 了解开窍药的作用和适用证、禁忌证。
+
 2. 熟悉开窍药与祛寒、清热药配伍应用的理论依据（联系中医基本理论）。
 
 3. 掌握开窍药中常用药的功效、临证应用，并比较其异同。
@@ -19,6 +20,6 @@
 
   开窍药气味芳香，性善走窜，多归心经，具有通关开窍、启闭醒神的作用，适用于邪陷窍闭之神昏，以及惊痫、中风等病出现的卒然昏厥之证。
 
-  神昏有虚、实之分，实证即闭证，以口噤、握拳、脉来有力为辨证依据。闭证又分寒闭、热闭，寒闭多见面青、身凉、苔白、脉迟；热闭多见面赤身热、苔黄脉数。二者均可应用开窍药。唯前者宜用温开，或配祛寒药同用；后者宜用凉开，或配清热药同用。虚证即脱证，多见神昏冷汗、肢凉、脉微欲绝等证，当用回阳救脱之法，不可用开窍药，以免进一步耗伤元气。
+  神昏有虚、实之分，实证即闭证，以口噤、握拳、脉来有力为辨证依据。闭证又分寒闭、热闭。寒闭多见面青、身凉、苔白、脉迟；热闭多见面赤身热、苔黄脉数。二者均可应用开窍药。唯前者宜用温开，或配祛寒药同用；后者宜用凉开，或配清热药同用。虚证即脱证，多见神昏冷汗、肢凉、脉微欲绝等证，当用回阳救脱之法，不可用开窍药，以免进一步耗伤元气。
 
   本类药物为急救、治标之品，只可暂用，不宜久服，久服泄人元气。又因本类药物以辛香为主，易于挥发，内服只做丸散，一般不入煎剂。
