--- a/ok/ek/ek0zl05-0.1.0.0.0.md
+++ b/ok/ek/ek0zl05-0.1.0.0.0.md
@@ -12,7 +12,7 @@
 
 1.面呈白色：多为寒证、虚证。主吐泻、主疳。因寒滞经脉，耗气失血，经脉空虚，气血不足则面色多白。白且浮肿为阳虚水泛，如肾病综合征。㿠白无华，唇爪色淡，多属血虚。面色苍白，四肢厥冷，多为阳气暴脱，可见于循环衰竭，面色乍白乍黄者，多为虫疳。
 
-2.面呈黄色：主疳、主积、主虚、主湿、主癥瘕、主疟。因脾失健运，水湿不化，或气血不足，皮肤缺少充养则见黄色。面黄而肌瘦，腹膨而懊𢙐者，为脾胃功能失调，常见于疳证。面黄无华，伴有白斑者为肠寄生虫病。面目俱黄而色鲜明者，为湿热内蕴之阳黄。面目黄而晦暗者，为寒湿阻滞之阴黄。新生儿一周内，面目黄染能自行消退者，为生理性黄疸，不属病态。
+2.面呈黄色：主疳、主积、主虚、主湿、主癥瘕、主疟。因脾失健运，水湿不化，或气血不足，皮肤缺少充养则见黄色。面黄而肌瘦，腹膨而懊憹者，为脾胃功能失调，常见于疳证。面黄无华，伴有白斑者为肠寄生虫病。面目俱黄而色鲜明者，为湿热内蕴之阳黄。面目黄而晦暗者，为寒湿阻滞之阴黄。新生儿一周内，面目黄染能自行消退者，为生理性黄疸，不属病态。
 
 3.面呈青色：主痛、主惊、主瘀、主风、主寒。因寒凝脉络，气血阻滞不通，不通则痛，面色青白，哭闹不安，是里寒腹痛，面青而晦暗，神昏抽搐，每见于惊风或癫癎发作之时。面唇青紫，呼吸急促，为肺气闭塞，气血瘀阻之重病。
 
