--- a/ok/fjx/fjx10-0.2.0.0.0.md
+++ b/ok/fjx/fjx10-0.2.0.0.0.md
@@ -12,7 +12,7 @@
 
 如主证病机不变，兼有其他症状可以随证加减。例如，往来寒热，头痛口苦者，加柴胡、黄芩以和解退热；胁痛、脘腹胀满甚者，加郁金、枳实、川楝子以疏肝行气止痛；噁心呕吐，食少纳呆者，加竹茹、半夏、神曲和胃消食止呕；大便秘结，可加枳实、虎杖或重用大黄以泻热通便；小便短赤选用车前草、泽泻、滑石增强清热利尿作用；热重者选加黄柏、龙胆草加强清热作者；黄疸甚者选加秦艽以利湿退黄。
 
-若本方去茵陈、大黄，加黄柏、甘草名为栀子柏皮汤。主治身黄发热，并兼有心烦懊愹，口渴苔黄等证。
+若本方去茵陈、大黄，加黄柏、甘草名为栀子柏皮汤。主治身黄发热，并兼有心烦懊憹，口渴苔黄等证。
 
 阳黄兼有表证者，可用麻黄连翘赤小豆汤。组成：麻黄二两  连翘二两  杏仁四十个  赤小豆一升  大枣十二枚  生梓白皮一升（现用桑白皮代替） 生姜二两  甘草二两，炙。
 
