--- a/ok/bc/bc03-0.1.3.0.0.md
+++ b/ok/bc/bc03-0.1.3.0.0.md
@@ -6,9 +6,9 @@
 
 **栀子以清泄为主要功效，善泻火除烦，泄热利湿**。为茜草科常绿灌木植物栀子的成熟果实。又名山栀。生用，炒焦或炒炭用。
 
- 本品味苦性寒，入心、肺、胃、三焦经。苦寒清降，泄三焦之火而利小便，故有清热利湿之功。轻清上行，善泻心肺胸膈之热，邪热得清，则心胸烦热可解，躁扰不宁自除，故有泻火除烦之效。本品尚可入肝，并有凉血止血作用。故凡热病，热蕴胸隔，心烦懊侬，或热郁血分，吐衄下血，或湿热蕴结之黄疸，淋病，小便不利等，均以之为要药。 
+ 本品味苦性寒，入心、肺、胃、三焦经。苦寒清降，泄三焦之火而利小便，故有清热利湿之功。轻清上行，善泻心肺胸膈之热，邪热得清，则心胸烦热可解，躁扰不宁自除，故有泻火除烦之效。本品尚可入肝，并有凉血止血作用。故凡热病，热蕴胸隔，心烦懊憹，或热郁血分，吐衄下血，或湿热蕴结之黄疸，淋病，小便不利等，均以之为要药。 
 
-【临证应用】栀子与淡豆豉合用，如栀子豉汤，以透邪泄热，除烦解郁，治热郁胸膈，心烦懊侬不眠。配黄连、连翘、黄芩等凉血解毒、泻火除烦之品，如清瘟败毒饮，治热毒炽盛，高热烦躁，神昏谵语等证。与茵陈、大黄合用，以清利湿热，利胆退黄，如茵陈蒿汤，治湿热郁结之黄疸发热，小便短赤等症，可增利湿退黄之效。与利尿通淋药车前子、木通、萹蓄等同用，如八正散，治疗淋闭小便不利。与生地、茅根等清热凉血药同用，有凉血止血作用，治疗热郁血分，血热妄行之吐衄下血。此外，生栀子研末醋调外敷，对外伤性肿痛有消肿止痛作用；涂敷疖肿
+【临证应用】栀子与淡豆豉合用，如栀子豉汤，以透邪泄热，除烦解郁，治热郁胸膈，心烦懊憹不眠。配黄连、连翘、黄芩等凉血解毒、泻火除烦之品，如清瘟败毒饮，治热毒炽盛，高热烦躁，神昏谵语等证。与茵陈、大黄合用，以清利湿热，利胆退黄，如茵陈蒿汤，治湿热郁结之黄疸发热，小便短赤等症，可增利湿退黄之效。与利尿通淋药车前子、木通、萹蓄等同用，如八正散，治疗淋闭小便不利。与生地、茅根等清热凉血药同用，有凉血止血作用，治疗热郁血分，血热妄行之吐衄下血。此外，生栀子研末醋调外敷，对外伤性肿痛有消肿止痛作用；涂敷疖肿
 及水火烫伤，亦有疗效。
 
 栀子生用清热泻火力强，炒焦后能止血。栀子皮偏于达表去肌热，栀子仁偏于走里清内热。
