update ok/wk/wk12-0.8.0.0.0.md. 1、又称“瘾疹”、“ 㾦疸㿔”、书的原文为又称“瘾疹”、“ 㾦㿔”、已修改。

--- a/ok/wk/wk12-0.8.0.0.0.md
+++ b/ok/wk/wk12-0.8.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第八节 瘾疹
 
-本病是鲜红色或苍白色风团的皮肤损害，时隐时现，有瘙痒感。《圣济总录》说：“盖身体风瘙而痒，瘙之隐隐而起是也。”又称“瘾疹”、“ 㾦疸㿔”、“风疹”等，俗称“风疹块”。本病有起病或消退均十分迅速，及风团游走不定，奇痒难忍等特点。本病可发生于任何年令，男女皆可患病。
+本病是鲜红色或苍白色风团的皮肤损害，时隐时现，有瘙痒感。《圣济总录》说：“盖身体风瘙而痒，瘙之隐隐而起是也。”又称“瘾疹”、“ 㾦㿔”、“风疹”等，俗称“风疹块”。本病有起病或消退均十分迅速，及风团游走不定，奇痒难忍等特点。本病可发生于任何年令，男女皆可患病。
 
 〔病因病机〕
 
