--- a/ok/fk/fk0zl05-0.1.0.0.0.md
+++ b/ok/fk/fk0zl05-0.1.0.0.0.md
@@ -64,7 +64,7 @@
 
 （九）利湿化痰
 
-湿邪为患，常有寒湿与湿热之不同。水湿停滞，阻遏阳气，可见寒湿为患，治宜温化水湿，代表方如健固汤、茯苓导水汤、苓桂术甘汤、全生白术散等；若湿郁化热之湿热证，法宗清热利湿，代表方如草薢渗湿汤、止带汤等；若脾虚不运，聚液成痰，痰湿内阻，下注胞宫，胞络而致妇科诸病者，治宜燥湿祛痰，代表方如，苍附导痰丸、涤痰汤等。
+湿邪为患，常有寒湿与湿热之不同。水湿停滞，阻遏阳气，可见寒湿为患，治宜温化水湿，代表方如健固汤、茯苓导水汤、苓桂术甘汤、全生白术散等；若湿郁化热之湿热证，法宗清热利湿，代表方如萆薢渗湿汤、止带汤等；若脾虚不运，聚液成痰，痰湿内阻，下注胞宫，胞络而致妇科诸病者，治宜燥湿祛痰，代表方如，苍附导痰丸、涤痰汤等。
 
 二、外治法
 
