--- a/ok/wk/wk14-0.5.0.0.0.md
+++ b/ok/wk/wk14-0.5.0.0.0.md
@@ -58,6 +58,6 @@
 
 〔文献摘录〕
 
-1.《疡科心得集·卷中》：脱囊起时寒热交作，囊红睾肿皮肤湿裂，隔日即黑，间日腐秽，不数日间其囊尽脱，睾丸外悬，势若险重，其实不妨，皆由湿热下流所致。内服四苓或草薢汤。”
+1.《疡科心得集·卷中》：脱囊起时寒热交作，囊红睾肿皮肤湿裂，隔日即黑，间日腐秽，不数日间其囊尽脱，睾丸外悬，势若险重，其实不妨，皆由湿热下流所致。内服四苓或萆薢汤。”
 
 2:《外科证治全书·囊脱》：“阴囊生毒破烂，肾子落出，臭气难闻。外用苏叶煎汤日洗，更取紫苏连根叶为末外敷，以青荷叶裹之。...…”
