--- a/ok/wk/wk14-0.8.0.0.0.md
+++ b/ok/wk/wk14-0.8.0.0.0.md
@@ -32,7 +32,7 @@
 
 治法：补肾滋阴，清泄相火。
 
-方药：知柏地黄汤合草薢分清饮加减。
+方药：知柏地黄汤合萆薢分清饮加减。
 
 失眠多梦者，加炒枣仁、夜交藤；遗精者，加芡实、莲子肉。
 
@@ -42,7 +42,7 @@
 
 方药：右归丸合金锁固精丸加减。
 
-有小便白浊时，加草薢，赤茯苓；腰痠疼痛者，加川断、杜仲。
+有小便白浊时，加萆薢，赤茯苓；腰痠疼痛者，加川断、杜仲。
 
 4.气血瘀滞证：小便淋浊日久，时好时作，小腹、会阴、睾丸坠胀隐痛不适，或有血尿、血精。舌质有紫斑、紫点，脉多沉涩。此为久病入络，气血瘀滞。
 
