--- a/ok/zjz/zjz01-1.4.3.0.0.md
+++ b/ok/zjz/zjz01-1.4.3.0.0.md
@@ -3,7 +3,7 @@
 行针亦称运针，是指将针刺入腧穴后，为了使之得气，激发针感以及进行补泻而施行的各种针刺手法。得气又称针感，是指 针刺入穴位后所产生的经气感应。当这种经气感应产生时，患者 感到针下出现相应的痠、麻、胀、重感，或抽搐，有的也出现温 热、凉爽、烧灼、触电样感，在针刺的局部或从针下向远端放 散。医者则有针下沉紧、沉涩、沉重感觉，如同磁铁吸引针一样。 所以《标幽赋》说道：“气之至也，如鱼吞钩饵之沉浮”。又说
 “沉涩紧而已至”。说明医者有沉紧、沉涩、沉重感觉，即是得气。起到疏通经气；调和气血的作用。如果针刺不得气，患者则没有什么感觉，而医者感到针下虚滑，如同针刺豆腐一样的感觉。《标幽赋》描写道：“轻滑慢而未来”，“气未至也，如闲处幽堂之 二深邃”。说明针与“经气”没有沟通。
 
-从针刺治病和针刺麻醉以及经络感传研究的实践证明，针感 的有无及强弱，直接关系到治疗效果的好坏。因此，古今医家都 很重视针刺的得气，《灵枢•九针十二原》指出：“为刺之要，气至 而有效。效之信，若风之吹云，明乎若见苍天”，《金针赋》说： “气速至而效速，气迟至而不治”。这都说明得气与否，是治疗成 败的关键。一般来说，得气迅速，疗效就好；得气迟缓，疗效就差，如不得气，则可能无效。因此，在针刺过程中，如果得气较 慢，甚至不得气，就要分祈不禧气的原因。或因取穴定位不准确， 手法运用不当；或因针刺角度有误，深浅失度。对此就应重新调 整腧穴的钎刺部位、角度、深度，运用必要的针刺手法，这样再次行针时，一般即可得气。如果患者病久体虚，正气虚惫，以致 经气不足；或因其他病理因素，感觉迟钝、丧失而不易得气时， 可采用行针催气，或留针候气，或用温针，或加艾灸，以助经气 的来复，而促使得气，或因治疗而随着疾病转愈，而经气逐渐得 到恢复，针刺时则迅速得气。若用上法而仍不得气者，多为脏 腑经络之气虚衰已极。正如《针炎大成•经络迎随设为问答》中说：“只以得气为度，如此而终不至者，不可治也”。对此，当考虑配 合或改用其他治疗方法。	
+从针刺治病和针刺麻醉以及经络感传研究的实践证明，针感 的有无及强弱，直接关系到治疗效果的好坏。因此，古今医家都 很重视针刺的得气，《灵枢•九针十二原》指出：“为刺之要，气至 而有效。效之信，若风之吹云，明乎若见苍天”，《金针赋》说： “气速至而效速，气迟至而不治”。这都说明得气与否，是治疗成 败的关键。一般来说，得气迅速，疗效就好；得气迟缓，疗效就差，如不得气，则可能无效。因此，在针刺过程中，如果得气较 慢，甚至不得气，就要分祈不禧气的原因。或因取穴定位不准确， 手法运用不当；或因针刺角度有误，深浅失度。对此就应重新调 整腧穴的钎刺部位、角度、深度，运用必要的针刺手法，这样再次行针时，一般即可得气。如果患者病久体虚，正气虚惫，以致 经气不足；或因其他病理因素，感觉迟钝、丧失而不易得气时， 可采用行针催气，或留针候气，或用温针，或加艾灸，以助经气 的来复，而促使得气，或因治疗而随着疾病转愈，而经气逐渐得 到恢复，针刺时则迅速得气。若用上法而仍不得气者，多为脏 腑经络之气虚衰已极。正如《针灸大成•经络迎随设为问答》中说：“只以得气为度，如此而终不至者，不可治也”。对此，当考虑配 合或改用其他治疗方法。	
 
 现将临床常用的行针基本手法和辅助手法介绍如下：
 
