--- a/ok/zjz/zjz02-0.2.0.0.0.md
+++ b/ok/zjz/zjz02-0.2.0.0.0.md
@@ -68,7 +68,7 @@
 
 ​        3.熨热灸：将艾条燃着的一端，与施灸部位的皮肤约距离3 厘米左右，如熨衣服一样，来回旋转移动进行施灸（图232)。适用于面积较大的风湿痛、软组织损伤等。
 
-​     （二）[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针灸   是以纯艾绒和[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针炎处方中的药物制成。
+​     （二）[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针灸   是以纯艾绒和[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针灸处方中的药物制成。
 
 ​        制针法：[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)125克、[穿山甲](https://www.gmzyjc.com/read/bc/bc12-0.0.15.0.0.md)250克、山羊血90克、千年健500克、钻地风300克、[肉桂](https://www.gmzyjc.com/read/bc/bc07-0.3.0.0.0.md)500克、小[茴香](https://www.gmzyjc.com/read/bc/bc07-0.9.0.0.0.md)500克、[苍术](https://www.gmzyjc.com/read/bc/bc04-0.0.2.0.0.md)500克、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)1000克、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)2000克、[麝香](https://www.gmzyjc.com/read/bc/bc08-0.0.1.0.0.md)少许，共为细末，取药末24克掺入艾绒内，平铺在40厘米见方的桑皮纸上，紧卷成爆竹状，外用鸡蛋清封固，阴干后备用。
 
